update localized strings from crowdin

--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -125,13 +125,16 @@
   "moreInformation": "Més informació",
   "resend": "Reenviar",
   "deleteMessage": "Suprimeix el missatge",
+  "deleteMessageQuestion": "Delete message?",
+  "deleteMessagesQuestion": "Delete messages?",
   "deleteMessages": "Suprimeix els missatges",
   "deleteMessageForEveryone": "Suprimeix el missatge per a tothom",
+  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
   "deleteMessagesForEveryone": "Suprimeix el missatge per a tothom",
   "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "Voleu suprimir aquesta conversa de forma permanent?",
   "clearAllData": "Esborrar totes les dades",
-  "deleteAccountWarning": "Això suprimirà permanentment els teus missatges, sessions i contactes.",
+  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
   "deleteContactConfirmation": "Estàs segur que vols esborrar aquesta conversa?",
   "quoteThumbnailAlt": "Miniatura d'una imatge d'un missatge citat",
   "imageAttachmentAlt": "Imatge adjunta al missatge",
@@ -150,7 +153,7 @@
   "savedTheFile": "Mèdia desada per $name$",
   "linkPreviewsTitle": "Envia previsualitzacions d'enllaços",
   "linkPreviewDescription": "Les previsualitzacions són compatibles amb la majoria d’Urls",
-  "linkPreviewsConfirmMessage": "No tindreu protecció completa de metadades en enviar o rebre previsualitzacions d’enllaços.",
+  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
   "mediaPermissionsTitle": "Micròfon i càmera",
   "mediaPermissionsDescription": "Permet l'accés a la càmera i el micròfon",
   "spellCheckTitle": "Revisar Ortografia",
@@ -428,8 +431,30 @@
   "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
   "deviceOnly": "Device Only",
   "entireAccount": "Entire Account",
+  "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
+  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
+  "iAmSure": "I am sure",
   "recoveryPhraseSecureTitle": "You're almost finished!",
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
-  "notificationSubtitle": "Notifications - $setting$"
+  "notificationSubtitle": "Notifications - $setting$",
+  "deletionTypeTitle": "Deletion Type",
+  "deleteJustForMe": "Delete just for me",
+  "messageDeletedPlaceholder": "This message has been deleted",
+  "messageDeleted": "Message deleted",
+  "surveyTitle": "Take our Session Survey",
+  "goToOurSurvey": "Go to our survey",
+  "incomingCall": "Incoming call",
+  "accept": "Accept",
+  "decline": "Decline",
+  "endCall": "End call",
+  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
+  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
+  "unableToCall": "cancel your ongoing call first",
+  "unableToCallTitle": "Cannot start new call",
+  "callMissed": "Missed call from $name$",
+  "callMissedTitle": "Call missed",
+  "startVideoCall": "Start Video Call",
+  "noCameraFound": "No camera found",
+  "noAudioInputFound": "No audio input found"
 }
