--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -125,13 +125,16 @@
   "moreInformation": "Mehr Informationen",
   "resend": "Erneut Senden",
   "deleteMessage": "Nachrichten Löschen",
+  "deleteMessageQuestion": "Delete message?",
+  "deleteMessagesQuestion": "Delete messages?",
   "deleteMessages": "Alle Nachrichten löschen",
   "deleteMessageForEveryone": "Nachricht für alle löschen",
+  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
   "deleteMessagesForEveryone": "Nachrichten für alle löschen",
   "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "Soll diese Unterhaltung unwiderruflich gelöscht werden?",
   "clearAllData": "Alle Daten löschen",
-  "deleteAccountWarning": "Dadurch werden Ihre Nachrichten, Sessions und Kontakte dauerhaft gelöscht.",
+  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
   "deleteContactConfirmation": "Möchten Sie diese Unterhaltung wirklich löschen?",
   "quoteThumbnailAlt": "Miniaturbild aus zitierter Nachricht",
   "imageAttachmentAlt": "Bildanhang",
@@ -150,7 +153,7 @@
   "savedTheFile": "Medien gespeichert von $name$",
   "linkPreviewsTitle": "Link-Vorschauen Senden",
   "linkPreviewDescription": "Vorschau wird für die meisten URLs unterstützt",
-  "linkPreviewsConfirmMessage": "Beim Senden und Empfangen von Link-Vorschauen sind Ihre Metadaten nicht vollständig geschützt.",
+  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
   "mediaPermissionsTitle": "Mikrofon und Kamera",
   "mediaPermissionsDescription": "Zugriff auf Kamera und Mikrofon erlauben",
   "spellCheckTitle": "Rechtschreibprüfung",
@@ -338,7 +341,7 @@
   "createAccount": "Konto Erstellen",
   "signIn": "Einloggen",
   "startInTrayTitle": "Start in Tray",
-  "startInTrayDescription": "Start Session as a minified app ",
+  "startInTrayDescription": "Wollen sie Session als minimierten Anwendung starten ",
   "yourUniqueSessionID": "Das ist Ihre Session ID.",
   "allUsersAreRandomly...": "Ihre Session ID ist die eindeutige Adresse, unter der Personen Sie über Session kontaktieren können. Ihre Session ID ist nicht mit Ihrer realen Identität verbunden, völlig anonym und von Natur aus privat.",
   "getStarted": "Loslegen",
@@ -421,15 +424,37 @@
   "latestUnreadIsAbove": "Erste ungelesene Nachricht ist oben",
   "sendRecoveryPhraseTitle": "Wiederherstellungsphrase zusenden",
   "sendRecoveryPhraseMessage": "Mit der Wiederherstellungsphrase kann auf deinen Account zugegriffen werden. Bist du dir sicher das du sie dir zusenden lassen möchtest?",
-  "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
-  "dialogClearAllDataDeletionFailedDesc": "Data not deleted with an unknown error. Do you want to delete data from just this device?",
-  "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
+  "dialogClearAllDataDeletionFailedTitle": "Daten nicht gelöscht",
+  "dialogClearAllDataDeletionFailedDesc": "Die Daten wurden aufgrund eines unbekannten Fehlers nicht gelöscht. Möchten Sie Ihre Daten nur von diesem Gerät löschen?",
+  "dialogClearAllDataDeletionFailedTitleQuestion": "Möchten Sie Daten nur von diesem Gerät löschen?",
   "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
-  "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
+  "dialogClearAllDataDeletionQuestion": "Möchten Sie nur dieses Gerät entfernen, oder Ihr Konto vollständig löschen?",
   "deviceOnly": "Device Only",
-  "entireAccount": "Entire Account",
-  "recoveryPhraseSecureTitle": "You're almost finished!",
-  "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
-  "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
-  "notificationSubtitle": "Benachrichtigungen - $setting$"
+  "entireAccount": "Gesamtes Konto",
+  "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
+  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
+  "iAmSure": "I am sure",
+  "recoveryPhraseSecureTitle": "Du bist fast fertig!",
+  "recoveryPhraseRevealMessage": "Sichern Sie Ihr Konto, indem Sie Ihre Wiederherstellungsphrase speichern. Zeigen Sie Ihre Wiederherstellungsphrase an und speichern Sie diese sicher.",
+  "recoveryPhraseRevealButtonText": "Wiederherstellungsphrase anzeigen",
+  "notificationSubtitle": "Benachrichtigungen - $setting$",
+  "deletionTypeTitle": "Deletion Type",
+  "deleteJustForMe": "Delete just for me",
+  "messageDeletedPlaceholder": "This message has been deleted",
+  "messageDeleted": "Message deleted",
+  "surveyTitle": "Take our Session Survey",
+  "goToOurSurvey": "Go to our survey",
+  "incomingCall": "Incoming call",
+  "accept": "Accept",
+  "decline": "Decline",
+  "endCall": "End call",
+  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
+  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
+  "unableToCall": "cancel your ongoing call first",
+  "unableToCallTitle": "Cannot start new call",
+  "callMissed": "Missed call from $name$",
+  "callMissedTitle": "Call missed",
+  "startVideoCall": "Start Video Call",
+  "noCameraFound": "No camera found",
+  "noAudioInputFound": "No audio input found"
 }
