--- a/_locales/eo/messages.json
+++ b/_locales/eo/messages.json
@@ -1,7 +1,7 @@
 {
   "privacyPolicy": "Terms & Privacy Policy",
   "copyErrorAndQuit": "Kopii la eraron kaj eliri",
-  "unknown": "Unknown",
+  "unknown": "Nekonata",
   "databaseError": "Datumbaza eraro",
   "mainMenuFile": "&Dosiero",
   "mainMenuEdit": "&Redakti",
@@ -36,12 +36,12 @@
   "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "loading": "Ŝargante…",
   "optimizingApplication": "Optimumigo de la aplikaĵo...",
-  "done": "Done",
+  "done": "Farite",
   "me": "Mi",
   "view": "Montri pli",
   "youLeftTheGroup": "Vi forlasis la grupon",
-  "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "Unread Message",
+  "youGotKickedFromGroup": "Vi estas forigita el la grupo.",
+  "unreadMessage": "Nelegita Mesaĝo",
   "unreadMessages": "Unread Messages",
   "debugLogExplanation": "Tiu protokolo estos afiŝita publike en la reto, por ke kontribuantoj vidu ĝin; vi povas revizii ĝin antaŭ ol sendi ĝin.",
   "debugLogError": "Eraro dum la alŝuto! Bv. konsideri mane aldoni la protokolo, al problemo, kiun vi raportas.",
@@ -125,13 +125,16 @@
   "moreInformation": "More information",
   "resend": "Resend",
   "deleteMessage": "Forigi mesaĝon",
+  "deleteMessageQuestion": "Delete message?",
+  "deleteMessagesQuestion": "Delete messages?",
   "deleteMessages": "Forigi mesaĝojn",
   "deleteMessageForEveryone": "Delete Message For Everyone",
+  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
   "deleteMessagesForEveryone": "Delete Messages For Everyone",
   "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "Ĉu porĉiame forigi tiun ĉi tutan interparolon?",
   "clearAllData": "Clear All Data",
-  "deleteAccountWarning": "This will permanently delete your messages and contacts.",
+  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
   "deleteContactConfirmation": "Are you sure you want to delete this conversation?",
   "quoteThumbnailAlt": "Bildominiaturo el citita mesaĝo",
   "imageAttachmentAlt": "Bildo kunsendita kun la mesaĝo",
@@ -139,8 +142,8 @@
   "lightboxImageAlt": "Bildo sendita en interparolo",
   "imageCaptionIconAlt": "Piktogramo montranta, ke tiu bildo havas priskribon",
   "addACaption": "Aldoni priskribon...",
-  "copy": "Copy",
-  "copySessionID": "Copy Session ID",
+  "copy": "Kopii",
+  "copySessionID": "Kopii Session ID-on",
   "copyOpenGroupURL": "Copy Group's URL",
   "save": "Konservi",
   "saved": "Saved",
@@ -150,7 +153,7 @@
   "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
   "linkPreviewDescription": "Previews are supported for most urls",
-  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending or receiving link previews.",
+  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
   "mediaPermissionsTitle": "Microphone and Camera",
   "mediaPermissionsDescription": "Permesi aliron al la fotilo kaj la mikrofono",
   "spellCheckTitle": "Spell Check",
@@ -428,8 +431,30 @@
   "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
   "deviceOnly": "Device Only",
   "entireAccount": "Entire Account",
+  "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
+  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
+  "iAmSure": "I am sure",
   "recoveryPhraseSecureTitle": "You're almost finished!",
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
-  "notificationSubtitle": "Notifications - $setting$"
+  "notificationSubtitle": "Notifications - $setting$",
+  "deletionTypeTitle": "Deletion Type",
+  "deleteJustForMe": "Delete just for me",
+  "messageDeletedPlaceholder": "This message has been deleted",
+  "messageDeleted": "Message deleted",
+  "surveyTitle": "Take our Session Survey",
+  "goToOurSurvey": "Go to our survey",
+  "incomingCall": "Incoming call",
+  "accept": "Accept",
+  "decline": "Decline",
+  "endCall": "End call",
+  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
+  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
+  "unableToCall": "cancel your ongoing call first",
+  "unableToCallTitle": "Cannot start new call",
+  "callMissed": "Missed call from $name$",
+  "callMissedTitle": "Call missed",
+  "startVideoCall": "Start Video Call",
+  "noCameraFound": "No camera found",
+  "noAudioInputFound": "No audio input found"
 }
