--- a/_locales/fa/messages.json
+++ b/_locales/fa/messages.json
@@ -60,9 +60,9 @@
   "thisMonth": "این ماه",
   "voiceMessage": "پیام صوتی",
   "dangerousFileType": "نوع پیوست به دلایل امنیتی مجاز نیست.",
-  "stagedPreviewThumbnail": "Draft thumbnail link preview for $domain$",
+  "stagedPreviewThumbnail": "پیش نویس پیوند پیش نمایش پیوند برای $domain$",
   "previewThumbnail": "Thumbnail link preview for $domain$",
-  "stagedImageAttachment": "Draft image attachment: $path$",
+  "stagedImageAttachment": "تصویر پیوست پیش نویس: $path$",
   "oneNonImageAtATimeToast": "When including a non-image attachment, the limit is one attachment per message.",
   "cannotMixImageAndNonImageAttachments": "You cannot mix non-image and image attachments in one message.",
   "maximumAttachments": "You cannot add any more attachments to this message.",
@@ -113,7 +113,7 @@
   "deleteMultiplePublicWarning": "آیا مطمئن هستید می‌خواهید این پیام‌ها را برای همگان در این گروه به صورت دائمی پاک کنید؟",
   "deleteWarning": "آیا مطمئن هستید؟ کلیک روی 'حذف' این پیام را برای همیشه از روی این دستگاه حذف خواهد کرد.",
   "deleteMultipleWarning": "آیا مطمئن هستید؟ با کلیک بر روی 'حذف'، این پیام‌ها فقط از این دستگاه حذف خواهد شد.",
-  "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
+  "messageDeletionForbidden": "شما دسترسی برای حذف پیام دیگران را ندارید",
   "deleteThisMessage": "این پیام را حذف کن",
   "deleted": "حذف شده",
   "from": "از",
@@ -125,13 +125,16 @@
   "moreInformation": "اطلاعات بیشتر",
   "resend": "ارسال مجدد",
   "deleteMessage": "حذف پیام",
+  "deleteMessageQuestion": "Delete message?",
+  "deleteMessagesQuestion": "Delete messages?",
   "deleteMessages": "حذف پیام‌ها",
   "deleteMessageForEveryone": "حذف پیام برای همگان",
+  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
   "deleteMessagesForEveryone": "حذف پیام‌ها برای همگان",
   "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "آیا می‌خواهید این گفتگو را برای همیشه حذف کنید؟",
   "clearAllData": "پاک‌سازی همه داده‌ها",
-  "deleteAccountWarning": "This will permanently delete your messages and contacts.",
+  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
   "deleteContactConfirmation": "آیا مطمئن هستید که می‌خواهید این مکالمه را حذف کنید؟",
   "quoteThumbnailAlt": "پیش‌نمایش تصویر از پیام نقل قول شده",
   "imageAttachmentAlt": "تصویر پیوست شده به پیام",
@@ -150,7 +153,7 @@
   "savedTheFile": "رسانه توسط $name$ ذخیره شد",
   "linkPreviewsTitle": "ارسال پیش‌نمایش لینک",
   "linkPreviewDescription": "پیش‌نمایش‌ها برای اکثر آدرس‌ها پشتیبانی می‌شوند",
-  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending or receiving link previews.",
+  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
   "mediaPermissionsTitle": "میکروفون و دوربین",
   "mediaPermissionsDescription": "اجازه دسترسی به دوربین و میکروفون",
   "spellCheckTitle": "بررسی املا",
@@ -158,10 +161,10 @@
   "spellCheckDirty": "برای اعمال تنظیمات جدید نیاز است Session را دوباره راه‌اندازی کنید",
   "notifications": "آگاه‌سازی‌ها",
   "readReceiptSettingDescription": "مشاهده و اشتراک گذاری زمان خوانده شدن پیام ( در همه جا خوانده شدن پیام معلوم باشد).",
-  "readReceiptSettingTitle": "Read Receipts",
+  "readReceiptSettingTitle": "رسید خوانده‌ شدن",
   "typingIndicatorsSettingDescription": "مشاهده و اشتراک گذاری هنگام تایپ کردن پیام (برای همه).",
-  "typingIndicatorsSettingTitle": "Typing Indicators",
-  "zoomFactorSettingTitle": "Zoom Factor",
+  "typingIndicatorsSettingTitle": "نشانگر های نوشته",
+  "zoomFactorSettingTitle": "عامل بزرگنمایی",
   "notificationSettingsDialog": "هنگام دریافت پیام, این جزئیات را نمایش بده:",
   "disableNotifications": "آگاه‌سازی‌ها غیرفعال باشند",
   "nameAndMessage": "هم نام و هم متن پیام",
@@ -180,7 +183,7 @@
   "timestamp_m": "1 دقیقه",
   "timestamp_h": "1 ساعت",
   "timestampFormat_M": "D MMM",
-  "messageBodyMissing": "Please enter a message body.",
+  "messageBodyMissing": "لطفا یک پیام وارد کنید.",
   "unblockToSend": "برای ارسال پیام،‌ ابتدا این مخاطب را از مسدود بودن درآورید!",
   "unblockGroupToSend": "برای ارسال پیام در گروه، آن را رفع انسداد کنید.",
   "youChangedTheTimer": "شما پیام تایمر پیام نابود شونده را روی $time$ تنظیم کردید",
@@ -202,7 +205,7 @@
   "changeNickname": "تغییر نام کاربری",
   "clearNickname": "پاک کردن نام مستعار",
   "nicknamePlaceholder": "نام مستعار جدید",
-  "changeNicknameMessage": "Enter a nickname for this user",
+  "changeNicknameMessage": "یک نام مستعار برای این کاربر وارد کنید",
   "timerOption_0_seconds_abbreviated": "خاموش",
   "timerOption_5_seconds_abbreviated": "5 ثانیه",
   "timerOption_10_seconds_abbreviated": "10 ثانیه",
@@ -220,7 +223,7 @@
   "youDisabledDisappearingMessages": "شما پیام های نابود شونده را غیر فعال کردید",
   "timerSetTo": "تایمر روی $time$ تنظیم شد",
   "noteToSelf": "یادداشت به خود",
-  "hideMenuBarTitle": "Hide Menu Bar",
+  "hideMenuBarTitle": "پنهان سازی نوار منو",
   "hideMenuBarDescription": "Toggle system menu bar visibility",
   "startConversation": "Start new conversation…",
   "invalidNumberError": "شماره نامعتبر",
@@ -242,30 +245,30 @@
   "titleIsNow": "در حال حاضر عنوان '$name$' می باشد",
   "joinedTheGroup": "$name$ عضو گروه شد",
   "multipleJoinedTheGroup": "$names$ عضو گروه شد",
-  "kickedFromTheGroup": "$name$ was removed from the group.",
-  "multipleKickedFromTheGroup": "$name$ were removed from the group.",
+  "kickedFromTheGroup": "$name$ از گروه حذف شد.",
+  "multipleKickedFromTheGroup": "$name$ از گروه حذف شدند.",
   "blockUser": "مسدود کردن",
   "unblockUser": "دفع مسدودیت",
   "unblocked": "رفع مسدودی",
   "blocked": "مسدود شده",
-  "blockedSettingsTitle": "Blocked contacts",
+  "blockedSettingsTitle": "مخاطبین مسدود شده",
   "unbanUser": "Unban User",
   "unbanUserConfirm": "Are you sure you want to unban user?",
   "userUnbanned": "User unbanned successfully",
   "userUnbanFailed": "Unban failed!",
-  "banUser": "Ban User",
+  "banUser": "مسدود کردن کاربر",
   "banUserConfirm": "Are you sure you want to ban user?",
   "banUserAndDeleteAll": "Ban and Delete All",
   "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
   "userBanned": "User banned successfully",
-  "userBanFailed": "Ban failed!",
+  "userBanFailed": "مسدود کردن شکست خورد!",
   "leaveGroup": "ترک کردن گروه",
   "leaveAndRemoveForEveryone": "Leave Group and remove for everyone",
-  "leaveGroupConfirmation": "Are you sure you want to leave this group?",
-  "leaveGroupConfirmationAdmin": "As you are the admin of this group, if you leave it it will be removed for every current members. Are you sure you want to leave this group?",
-  "cannotRemoveCreatorFromGroup": "Cannot remove this user",
-  "cannotRemoveCreatorFromGroupDesc": "You cannot remove this user as they are the creator of the group.",
-  "noContactsForGroup": "You don't have any contacts yet",
+  "leaveGroupConfirmation": "آیا مطمئن هستید که می‌خواهید این گروه را ترک کنید؟",
+  "leaveGroupConfirmationAdmin": "چون شما مدیر این گروه هستید، اگه گروه رو ترک کنید گروه برای همه اعضا حذف میشه. آیا مطمئنید که میخواید این گروه رو ترک کنید؟",
+  "cannotRemoveCreatorFromGroup": "این کاربر را نمیشود حذف کرد",
+  "cannotRemoveCreatorFromGroupDesc": "شما نمیتوانید این کاربر را حذف کنید زیرا سازنده گروه هستند.",
+  "noContactsForGroup": "شما هنوز مخاطبی ندارید",
   "failedToAddAsModerator": "Failed to add user as moderator",
   "failedToRemoveFromModerator": "Failed to remove user from the moderator list",
   "copyMessage": "کپی متن پیام",
@@ -306,9 +309,9 @@
   "setPasswordTitle": "تنظیم رمز عبور",
   "changePasswordTitle": "رمز عبور تغییر کرد",
   "removePasswordTitle": "کلمه‌ی عبور حذف شد",
-  "setPasswordToastDescription": "Your password has been set. Please keep it safe.",
+  "setPasswordToastDescription": "رمز عبور شما ذخیره شد. لطفا آن را در جای امنی ذخیره کنید.",
   "changePasswordToastDescription": "Your password has been changed. Please keep it safe.",
-  "removePasswordToastDescription": "You have removed your password.",
+  "removePasswordToastDescription": "شما رمز عبور خود را حذف کردید.",
   "publicChatExists": "You are already connected to this open group",
   "connectToServerFail": "امکان پیوستن به گروه نیست",
   "connectingToServer": "در حال اتصال...",
@@ -316,44 +319,44 @@
   "setPasswordFail": "تنظیم رمز عبور شکست خورد",
   "passwordLengthError": "طول رمز عبور باید بین ۶ تا ۶۴ کاراکتر باشد",
   "passwordTypeError": "Password must be a string",
-  "passwordCharacterError": "Password must only contain letters, numbers and symbols",
-  "remove": "Remove",
+  "passwordCharacterError": "رمز عبور باید فقط شامل حروف، اعداد و نشان ها باشد",
+  "remove": "حذف",
   "invalidSessionId": "Invalid Session ID",
   "invalidPubkeyFormat": "Invalid Pubkey Format",
   "emptyGroupNameError": "Please enter a group name",
-  "editProfileModalTitle": "Profile",
-  "groupNamePlaceholder": "Group Name",
-  "inviteContacts": "Invite Contacts",
-  "addModerators": "Add Moderators",
-  "removeModerators": "Remove Moderators",
+  "editProfileModalTitle": "نمایه",
+  "groupNamePlaceholder": "نام گروه",
+  "inviteContacts": "دعوت مخاطبین",
+  "addModerators": "اضافه کردن مدیر",
+  "removeModerators": "حذف کردن مدیر",
   "addAsModerator": "Add As Moderator",
   "removeFromModerators": "Remove From Moderators",
-  "add": "Add",
+  "add": "اضافه کردن",
   "addingContacts": "Adding contacts to",
-  "noContactsToAdd": "No contacts to add",
+  "noContactsToAdd": "مخاطبی برای اضافه کردن وجود ندارد",
   "noMembersInThisGroup": "No other members in this group",
-  "noModeratorsToRemove": "no moderators to remove",
-  "onlyAdminCanRemoveMembers": "You are not the creator",
-  "onlyAdminCanRemoveMembersDesc": "Only the creator of the group can remove users",
+  "noModeratorsToRemove": "مدیری برای حذف کردن وجود ندارد",
+  "onlyAdminCanRemoveMembers": "شما موسس گروه نیستید",
+  "onlyAdminCanRemoveMembersDesc": "فقط موسس گروه میتواند کاربران را حذف کند",
   "createAccount": "Create Account",
-  "signIn": "Sign In",
+  "signIn": "ثبت نام",
   "startInTrayTitle": "Start in Tray",
   "startInTrayDescription": "Start Session as a minified app ",
   "yourUniqueSessionID": "Say hello to your Session ID",
   "allUsersAreRandomly...": "Your Session ID is the unique address people can use to contact you on Session. With no connection to your real identity, your Session ID is totally anonymous and private by design.",
-  "getStarted": "Get started",
+  "getStarted": "شروع به کار کنید",
   "createSessionID": "Create Session ID",
-  "recoveryPhrase": "Recovery Phrase",
-  "enterRecoveryPhrase": "Enter your recovery phrase",
-  "displayName": "Display Name",
-  "anonymous": "Anonymous",
+  "recoveryPhrase": "عبارت بازیابی",
+  "enterRecoveryPhrase": "عبارت بازیابی خود را وارد کنید",
+  "displayName": "نمایش نام",
+  "anonymous": "ناشناس",
   "removeResidueMembers": "Clicking ok will also remove those members as they left the group.",
-  "enterDisplayName": "Enter a display name",
-  "enterOptionalPassword": "Enter password (optional)",
+  "enterDisplayName": "یک نام نمایشی وارد کنید",
+  "enterOptionalPassword": "رمز عبور وارد کنید (اختیاری)",
   "continueYourSession": "Continue Your Session",
   "linkDevice": "Link Device",
-  "restoreUsingRecoveryPhrase": "Restore your account",
-  "or": "or",
+  "restoreUsingRecoveryPhrase": "حساب خود را بازیابی کنید",
+  "or": "یا",
   "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/legal/#tos\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
   "beginYourSession": "Begin your Session.",
   "welcomeToYourSession": "Welcome to your Session",
@@ -370,7 +373,7 @@
   "recoveryPhraseEmpty": "عبارت بازیابی خود را وارد کنید",
   "displayNameEmpty": "لطفا یک نام نمایشی وارد کنید",
   "members": "$count$ عضو",
-  "joinOpenGroup": "Join Open Group",
+  "joinOpenGroup": "به گروه باز بپیوندید",
   "newClosedGroup": "گروه خصوصی جدید",
   "createClosedGroupNamePrompt": "نام گروه",
   "createClosedGroupPlaceholder": "نام گروه را وارد کنید",
@@ -383,16 +386,16 @@
   "pickClosedGroupMember": "لطفا حداقل یک عضو گروه را انتخاب کنید",
   "closedGroupMaxSize": "یک گروه خصوصی نمی‌تواند بیش از ۱۰۰ عضو داشته باشد",
   "noBlockedContacts": "هیج مخاطبی مسدود نشده",
-  "userAddedToModerators": "User added to moderator list",
-  "userRemovedFromModerators": "User removed from moderator list",
+  "userAddedToModerators": "کاربر به لیست مدیر اضافه شد",
+  "userRemovedFromModerators": "کاربر از لیست مدیر حذف شد",
   "orJoinOneOfThese": "یا به یکی از اینها بپیوندید...",
   "helpUsTranslateSession": "به ما کمک کنید که Session را ترجمه کنیم",
   "translation": "ترجمه",
-  "closedGroupInviteFailTitle": "Group Invitation Failed",
+  "closedGroupInviteFailTitle": "دعوت به گروه ناموفق بود",
   "closedGroupInviteFailTitlePlural": "Group Invitations Failed",
   "closedGroupInviteFailMessage": "Unable to successfully invite a group member",
   "closedGroupInviteFailMessagePlural": "Unable to successfully invite all group members",
-  "closedGroupInviteOkText": "Retry invitations",
+  "closedGroupInviteOkText": "امتحان دوباره دعوت ها",
   "closedGroupInviteSuccessTitlePlural": "Group Invitations Completed",
   "closedGroupInviteSuccessTitle": "Group Invitation Succeeded",
   "closedGroupInviteSuccessMessage": "Successfully invited closed group members",
@@ -400,36 +403,58 @@
   "notificationForConvo_all": "همه",
   "notificationForConvo_disabled": "غیرفعال شده",
   "notificationForConvo_mentions_only": "Mentions only",
-  "onionPathIndicatorTitle": "Path",
+  "onionPathIndicatorTitle": "مسیر",
   "onionPathIndicatorDescription": "Session hides your IP by bouncing your messages through several Service Nodes in Session's decentralized network. These are the countries your connection is currently being bounced through:",
-  "unknownCountry": "Unknown Country",
-  "device": "Device",
-  "destination": "Destination",
-  "learnMore": "Learn more",
-  "linkVisitWarningTitle": "Open this link in your browser?",
-  "linkVisitWarningMessage": "Are you sure you want to open $url$ in your browser?",
-  "open": "Open",
-  "audioMessageAutoplayTitle": "Audio Message Autoplay",
+  "unknownCountry": "کشور ناشناخته",
+  "device": "دستگاه",
+  "destination": "مقصد",
+  "learnMore": "اطلاعات بیشتر",
+  "linkVisitWarningTitle": "این لینک را در مرورگر خود باز میکنید؟",
+  "linkVisitWarningMessage": "آیا مطمئنید که میخواهید $url$ را در مرورگر خود باز کنید؟",
+  "open": "باز کردن",
+  "audioMessageAutoplayTitle": "پخش خودکار پیام صوتی",
   "audioMessageAutoplayDescription": "Automatically play consecutively sent audio messages",
   "clickToTrustContact": "Click to download media",
-  "trustThisContactDialogTitle": "Trust $name$?",
-  "trustThisContactDialogDescription": "Are you sure you want to download media sent by $name$?",
-  "pinConversation": "Pin Conversation",
+  "trustThisContactDialogTitle": "اعتماد به $name$؟",
+  "trustThisContactDialogDescription": "آیا مطمئنید که میخواهید رسانه های ارسال شده توسط $name$ را بارگذاری کنید؟",
+  "pinConversation": "سنجاق کردن گفتگو",
   "unpinConversation": "Unpin Conversation",
-  "pinConversationLimitTitle": "Pinned conversations limit",
+  "pinConversationLimitTitle": "محدودیت سنجاق کردن گفتگوها",
   "pinConversationLimitToastDescription": "You can only pin $number$ conversations",
   "latestUnreadIsAbove": "First unread message is above",
   "sendRecoveryPhraseTitle": "Sending Recovery Phrase",
   "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
-  "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
+  "dialogClearAllDataDeletionFailedTitle": "داده ها حذف نشدند",
   "dialogClearAllDataDeletionFailedDesc": "Data not deleted with an unknown error. Do you want to delete data from just this device?",
   "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
   "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
   "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
-  "deviceOnly": "Device Only",
-  "entireAccount": "Entire Account",
-  "recoveryPhraseSecureTitle": "You're almost finished!",
+  "deviceOnly": "فقط دستگاه",
+  "entireAccount": "تمام حساب",
+  "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
+  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
+  "iAmSure": "I am sure",
+  "recoveryPhraseSecureTitle": "تقریبا کار شما تمومه!",
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
-  "notificationSubtitle": "Notifications - $setting$"
+  "notificationSubtitle": "اعلان ها - $setting$",
+  "deletionTypeTitle": "Deletion Type",
+  "deleteJustForMe": "Delete just for me",
+  "messageDeletedPlaceholder": "This message has been deleted",
+  "messageDeleted": "Message deleted",
+  "surveyTitle": "Take our Session Survey",
+  "goToOurSurvey": "Go to our survey",
+  "incomingCall": "Incoming call",
+  "accept": "Accept",
+  "decline": "Decline",
+  "endCall": "End call",
+  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
+  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
+  "unableToCall": "cancel your ongoing call first",
+  "unableToCallTitle": "Cannot start new call",
+  "callMissed": "Missed call from $name$",
+  "callMissedTitle": "Call missed",
+  "startVideoCall": "Start Video Call",
+  "noCameraFound": "No camera found",
+  "noAudioInputFound": "No audio input found"
 }
