--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -4,9 +4,9 @@
   "unknown": "Inconnu",
   "databaseError": "Erreur de base de données",
   "mainMenuFile": "&Fichier",
-  "mainMenuEdit": "É&dition",
+  "mainMenuEdit": "Édition",
   "mainMenuView": "&Voir",
-  "mainMenuWindow": "F&enêtre",
+  "mainMenuWindow": "Fenêtre",
   "mainMenuHelp": "&Aide",
   "appMenuHide": "Cacher",
   "appMenuHideOthers": "Cacher les autres",
@@ -125,13 +125,16 @@
   "moreInformation": "Plus d’informations",
   "resend": "Renvoyer",
   "deleteMessage": "Supprimer le message",
+  "deleteMessageQuestion": "Delete message?",
+  "deleteMessagesQuestion": "Delete messages?",
   "deleteMessages": "Supprimer les messages",
   "deleteMessageForEveryone": "Supprimer ce message pour tout le monde",
+  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
   "deleteMessagesForEveryone": "Supprimer ces messages pour tout le monde",
   "deleteForEveryone": "Supprimer ce message",
   "deleteConversationConfirmation": "Supprimer définitivement cette conversation ?",
   "clearAllData": "Effacer toutes les données",
-  "deleteAccountWarning": "Cela supprimera définitivement vos messages, vos sessions et vos contacts.",
+  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
   "deleteContactConfirmation": "Voulez-vous vraiment supprimer cette conversation ?",
   "quoteThumbnailAlt": "Imagette du message cité",
   "imageAttachmentAlt": "Image jointe au message",
@@ -150,7 +153,7 @@
   "savedTheFile": "$name$ a enregistré le média",
   "linkPreviewsTitle": "Envoyer des aperçus de liens",
   "linkPreviewDescription": "Les aperçus sont pris en charge pour la plupart des URLs",
-  "linkPreviewsConfirmMessage": "Vous n'aurez pas une protection complète des métadonnées en envoyant des aperçu de liens.",
+  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
   "mediaPermissionsTitle": "Microphone et caméra",
   "mediaPermissionsDescription": "Autoriser l’accès à la caméra et au micro",
   "spellCheckTitle": "Vérification orthographique",
@@ -255,8 +258,8 @@
   "userUnbanFailed": "Le débannissement a échoué !",
   "banUser": "Bannir l'utilisateur",
   "banUserConfirm": "Êtes-vous sûr de vouloir bannir cet utilisateur ?",
-  "banUserAndDeleteAll": "Ban and Delete All",
-  "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
+  "banUserAndDeleteAll": "Bannir et tout supprimer",
+  "banUserAndDeleteAllConfirm": "Êtes-vous sûr de vouloir bannir cet utilisateur et supprimer tous ses messages ?",
   "userBanned": "Utilisateur banni",
   "userBanFailed": "Le bannissement a échoué",
   "leaveGroup": "Quitter le groupe",
@@ -337,8 +340,8 @@
   "onlyAdminCanRemoveMembersDesc": "Seul le créateur du groupe peut supprimer des utilisateurs",
   "createAccount": "Créer un compte",
   "signIn": "Connexion",
-  "startInTrayTitle": "Start in Tray",
-  "startInTrayDescription": "Start Session as a minified app ",
+  "startInTrayTitle": "Commencer dans la zone de notification",
+  "startInTrayDescription": "Démarrer Session en tant qu'application minifiée ",
   "yourUniqueSessionID": "Dites bonjour à votre Session ID",
   "allUsersAreRandomly...": "Votre Session ID est l'identifiant unique que les gens utilisent pour vous contacter dans Session. Sans lien avec votre identité réelle, votre Session ID est complètement anonyme et privé.",
   "getStarted": "Commencer",
@@ -358,7 +361,7 @@
   "beginYourSession": "Commencez votre Session.",
   "welcomeToYourSession": "Bienvenue sur Session",
   "newSession": "Nouvelle Session",
-  "searchFor...": "Search for conversations or contacts",
+  "searchFor...": "Rechercher des conversations ou des contacts",
   "enterSessionID": "Saisir un Session ID",
   "enterSessionIDOfRecipient": "Saisissez le Session ID du destinataire",
   "usersCanShareTheir...": "Les utilisateurs peuvent partager leur Session ID depuis les paramètres du compte ou en utilisant le code QR.",
@@ -421,15 +424,37 @@
   "latestUnreadIsAbove": "Le premier message non lu se situe au-dessus",
   "sendRecoveryPhraseTitle": "Envoyer la phrase de récupération",
   "sendRecoveryPhraseMessage": "Vous essayer actuellement d’envoyer votre phrase de récupération, qui peut être utilisée pour accéder a votre compte. Êtes-vous sûre de vouloir envoyer ce message ?",
-  "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
-  "dialogClearAllDataDeletionFailedDesc": "Data not deleted with an unknown error. Do you want to delete data from just this device?",
-  "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
-  "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
-  "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
-  "deviceOnly": "Device Only",
-  "entireAccount": "Entire Account",
-  "recoveryPhraseSecureTitle": "You're almost finished!",
-  "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
-  "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
-  "notificationSubtitle": "Notifications - $setting$"
+  "dialogClearAllDataDeletionFailedTitle": "Données non supprimées",
+  "dialogClearAllDataDeletionFailedDesc": "Données non supprimées à cause d'une erreur inconnue. Voulez-vous supprimer les données de cet appareil seulement ?",
+  "dialogClearAllDataDeletionFailedTitleQuestion": "Voulez-vous supprimer les données de cet appareil?",
+  "dialogClearAllDataDeletionFailedMultiple": "Données non détectées par ces nœuds de services : $snodes$",
+  "dialogClearAllDataDeletionQuestion": "Souhaitez-vous effacer seulement sur cet appareil ou supprimer l'ensemble de votre compte ?",
+  "deviceOnly": "Appareil uniquement",
+  "entireAccount": "L’ensemble du compte",
+  "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
+  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
+  "iAmSure": "I am sure",
+  "recoveryPhraseSecureTitle": "Vous avez presque terminé !",
+  "recoveryPhraseRevealMessage": "Sécurisez votre compte en enregistrant votre phrase de récupération. Afficher votre phrase de récupération puis stockez-la en toute sécurité pour la sécuriser.",
+  "recoveryPhraseRevealButtonText": "Afficher la phrase de récupération",
+  "notificationSubtitle": "Paramètres des notifications",
+  "deletionTypeTitle": "Deletion Type",
+  "deleteJustForMe": "Delete just for me",
+  "messageDeletedPlaceholder": "This message has been deleted",
+  "messageDeleted": "Message deleted",
+  "surveyTitle": "Take our Session Survey",
+  "goToOurSurvey": "Go to our survey",
+  "incomingCall": "Incoming call",
+  "accept": "Accept",
+  "decline": "Decline",
+  "endCall": "End call",
+  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
+  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
+  "unableToCall": "cancel your ongoing call first",
+  "unableToCallTitle": "Cannot start new call",
+  "callMissed": "Missed call from $name$",
+  "callMissedTitle": "Call missed",
+  "startVideoCall": "Start Video Call",
+  "noCameraFound": "No camera found",
+  "noAudioInputFound": "No audio input found"
 }
