--- a/_locales/hi/messages.json
+++ b/_locales/hi/messages.json
@@ -73,7 +73,7 @@
   "attemptingReconnection": "फिर से कनेक्ट करने का प्रयास करना$reconnect_duration_in_seconds$सेकंड",
   "submitDebugLog": "डीबग लॉग",
   "debugLog": "लॉग को डीबग करें",
-  "goToReleaseNotes": "Go to Release Notes",
+  "goToReleaseNotes": "रिलीज़ नोट्स पे जाइए",
   "goToSupportPage": "सहायता पेज पर जाएँ",
   "menuReportIssue": "समस्या की रिपोर्ट करें…",
   "about": "हमारे बारे में",
@@ -86,14 +86,14 @@
   "contactsHeader": "संपर्क",
   "messagesHeader": "संदेश",
   "settingsHeader": "सेटिंग्स",
-  "typingAlt": "Typing animation for this conversation",
-  "contactAvatarAlt": "Avatar for contact $name$",
+  "typingAlt": "इस कन्वर्सेशन के लिए टाइपिंग एनीमेशन",
+  "contactAvatarAlt": "$name$ कांटेक्ट का अवतार",
   "downloadAttachment": "अनुलग्नक डाउनलोड करें",
   "replyToMessage": "Reply to Message",
   "replyingToMessage": "को जवाब दे रहे हैं",
-  "originalMessageNotFound": "Original message not found",
+  "originalMessageNotFound": "मूल संदेश नहीं मिला",
   "originalMessageNotAvailable": "मूल संदेश अब उपलब्ध नहीं है",
-  "messageFoundButNotLoaded": "Original message found, but not loaded. Scroll up to load it.",
+  "messageFoundButNotLoaded": "मूल्य सन्देश मिला है, परन्तु लोड नहीं हुआ। लोड करने के लिए ऊपर स्क्रॉल कीजिये",
   "recording": "रिकॉर्डिंग",
   "you": "आप",
   "audioPermissionNeededTitle": "Microphone access required",
@@ -101,12 +101,12 @@
   "audio": "ऑडियो",
   "video": "वीडियो",
   "photo": "फ़ोटो",
-  "cannotUpdate": "Cannot Update",
-  "cannotUpdateDetail": "Session Desktop failed to update, but there is a new version available. Please go to https://getsession.org/ and install the new version manually, then either contact support or file a bug about this problem.",
+  "cannotUpdate": "अपडेट नहीं हो रहा",
+  "cannotUpdateDetail": "सेशन डेस्कटॉप अपडेट नहीं हो पाया, परन्तु नया वर्शन उपलब्ध है। कृपया https://getsession.org/ पर जाके सेशन को मैन्युअली इनस्टॉल कीजिये, और ग्राहक सेवा से संपर्क कीजिये या इसका बग रिपोर्ट दीजिये",
   "ok": "ठीक",
   "cancel": "रद्द करें",
-  "close": "Close",
-  "continue": "Continue",
+  "close": "बंद करे",
+  "continue": "जारी रखें",
   "error": " गलती",
   "delete": "हटाना",
   "deletePublicWarning": "Are you sure? This will permanently remove this message for everyone in this open group.",
@@ -122,16 +122,19 @@
   "received": "प्राप्त किया",
   "sendMessage": "एक संदेश भेजें",
   "groupMembers": "समूह के सदस्य",
-  "moreInformation": "More information",
-  "resend": "Resend",
+  "moreInformation": "अधिक जानकारी",
+  "resend": "फिर से भेजें",
   "deleteMessage": "Delete Message",
+  "deleteMessageQuestion": "Delete message?",
+  "deleteMessagesQuestion": "Delete messages?",
   "deleteMessages": "संदेश हटाएँ",
   "deleteMessageForEveryone": "Delete Message For Everyone",
+  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
   "deleteMessagesForEveryone": "Delete Messages For Everyone",
   "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "इस वार्तालाप को स्थायी रूप से हटाएं?",
-  "clearAllData": "Clear All Data",
-  "deleteAccountWarning": "This will permanently delete your messages and contacts.",
+  "clearAllData": "सभी डेटा हटाएं",
+  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
   "deleteContactConfirmation": "Are you sure you want to delete this conversation?",
   "quoteThumbnailAlt": "Thumbnail of image from quoted message",
   "imageAttachmentAlt": "Image attached to message",
@@ -150,7 +153,7 @@
   "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
   "linkPreviewDescription": "Previews are supported for most urls",
-  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending or receiving link previews.",
+  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
   "mediaPermissionsTitle": "Microphone and Camera",
   "mediaPermissionsDescription": "Allow access to camera and microphone",
   "spellCheckTitle": "Spell Check",
@@ -428,8 +431,30 @@
   "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
   "deviceOnly": "Device Only",
   "entireAccount": "Entire Account",
+  "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
+  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
+  "iAmSure": "I am sure",
   "recoveryPhraseSecureTitle": "You're almost finished!",
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
-  "notificationSubtitle": "Notifications - $setting$"
+  "notificationSubtitle": "Notifications - $setting$",
+  "deletionTypeTitle": "Deletion Type",
+  "deleteJustForMe": "Delete just for me",
+  "messageDeletedPlaceholder": "This message has been deleted",
+  "messageDeleted": "Message deleted",
+  "surveyTitle": "Take our Session Survey",
+  "goToOurSurvey": "Go to our survey",
+  "incomingCall": "Incoming call",
+  "accept": "Accept",
+  "decline": "Decline",
+  "endCall": "End call",
+  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
+  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
+  "unableToCall": "cancel your ongoing call first",
+  "unableToCallTitle": "Cannot start new call",
+  "callMissed": "Missed call from $name$",
+  "callMissedTitle": "Call missed",
+  "startVideoCall": "Start Video Call",
+  "noCameraFound": "No camera found",
+  "noAudioInputFound": "No audio input found"
 }
