--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -41,8 +41,8 @@
   "view": "Lihat",
   "youLeftTheGroup": "Anda telah keluar dari grup.",
   "youGotKickedFromGroup": "Anda dikeluarkan dari grup.",
-  "unreadMessage": "Unread Message",
-  "unreadMessages": "Unread Messages",
+  "unreadMessage": "Pesan Belum Terbaca",
+  "unreadMessages": "Pesan Belum Terbaca",
   "debugLogExplanation": "Catatan ini akan diunggah secara publik agar kontributor dapat melihat. Anda dapat memeriksa kembali dan menyunting sebelum mengunggahnya.",
   "debugLogError": "Terjadi kesalahan ketika mengunggah! Harap perhatikan manual menambahkan catatan bug dalam file Anda. ",
   "reportIssue": "Laporkan masalah",
@@ -90,32 +90,32 @@
   "contactAvatarAlt": "Avatar untuk kontak $name$",
   "downloadAttachment": "Unduh Lampiran",
   "replyToMessage": "Balas pesan",
-  "replyingToMessage": "Replying to:",
+  "replyingToMessage": "Membalas ke:",
   "originalMessageNotFound": "Pesan asli tidak ditemukan.",
   "originalMessageNotAvailable": "Pesan asli tidak lagi tersedia",
   "messageFoundButNotLoaded": "Original message found, but not loaded. Scroll up to load it.",
-  "recording": "Recording",
+  "recording": "Merekam",
   "you": "Anda",
   "audioPermissionNeededTitle": "Microphone access required",
   "audioPermissionNeeded": "Untuk mengirim pesan suara, izinkan Session mengakses mikrofon Anda.",
-  "audio": "Audio",
+  "audio": "Suara",
   "video": "Video",
   "photo": "Foto",
-  "cannotUpdate": "Cannot Update",
-  "cannotUpdateDetail": "Session Desktop failed to update, but there is a new version available. Please go to https://getsession.org/ and install the new version manually, then either contact support or file a bug about this problem.",
+  "cannotUpdate": "Pembeharuan Gagal",
+  "cannotUpdateDetail": "Gagal memperbaharui Session Desktop. Silahkan kunjungi https://getsession.org/ untuk memeasang versi terbaru secara manual. Anda bisa menghubungi tim Session atau mengajukan bug terhadap masalah ini.",
   "ok": "OK",
   "cancel": "Batal",
-  "close": "Close",
+  "close": "Tutup",
   "continue": "Lanjutkan",
   "error": "Galat",
   "delete": "Hapus",
-  "deletePublicWarning": "Are you sure? This will permanently remove this message for everyone in this open group.",
-  "deleteMultiplePublicWarning": "Are you sure? This will permanently remove these messages for everyone in this open group.",
+  "deletePublicWarning": "Anda yakin? Aksi ini akan menghapus pesan ini secara permanen untuk seluruh orang di grup terbuka ini.",
+  "deleteMultiplePublicWarning": "Anda yakin? Aksi ini akan menghapus pesan-pesan ini secara permanen untuk seluruh orang di grup terbuka ini.",
   "deleteWarning": "Apakah Anda yakin? Menekan \"hapus\" akan menghapus pesan secara permanen hanya pada perangkat ini.",
-  "deleteMultipleWarning": "Are you sure? Clicking 'delete' will permanently remove these messages from this device only.",
-  "messageDeletionForbidden": "You don’t have permission to delete others’ messages",
+  "deleteMultipleWarning": "Anda yakin? Aksi ini akan menghapus pesan secara permanen hanya di perangkat ini.",
+  "messageDeletionForbidden": "Anda tidak diizinkan untuk menghapus pesan lainnya",
   "deleteThisMessage": "Hapus pesan",
-  "deleted": "Deleted",
+  "deleted": "Terhapus",
   "from": "Dari:",
   "to": "Kepada:",
   "sent": "Terkirim",
@@ -125,13 +125,16 @@
   "moreInformation": "Informasi lebih lanjut",
   "resend": "Kirim ulang",
   "deleteMessage": "Hapus pesan",
+  "deleteMessageQuestion": "Delete message?",
+  "deleteMessagesQuestion": "Delete messages?",
   "deleteMessages": "Hapus pesan",
-  "deleteMessageForEveryone": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "Delete Messages For Everyone",
+  "deleteMessageForEveryone": "Hapus pesan untuk semua",
+  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
+  "deleteMessagesForEveryone": "Hapus pesan untuk semua",
   "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "Hapus obrolan ini selamanya?",
   "clearAllData": "Hapus semua data",
-  "deleteAccountWarning": "Pesan, Session, dan kontak anda akan dihapus secara permanen",
+  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
   "deleteContactConfirmation": "Apakah anda yakin ingin menghapus percakapan ini?",
   "quoteThumbnailAlt": "Cuplikan gambar dari pesan yang dikutip",
   "imageAttachmentAlt": "Gambar dilampirkan kedalam pesan",
@@ -140,22 +143,22 @@
   "imageCaptionIconAlt": "Ikon mengindikasikan jika gambar ini memiliki takarir",
   "addACaption": "Tambah keterangan...",
   "copy": "Salin",
-  "copySessionID": "Copy Session ID",
-  "copyOpenGroupURL": "Copy Group's URL",
+  "copySessionID": "Salin Session ID",
+  "copyOpenGroupURL": "Salin URL grup",
   "save": "Simpan",
-  "saved": "Saved",
+  "saved": "Tersimpan",
   "permissions": "Perizinan",
   "general": "Umum",
-  "tookAScreenshot": "$name$ took a screenshot",
-  "savedTheFile": "Media saved by $name$",
+  "tookAScreenshot": "$name$ mengambil tangkapan layar",
+  "savedTheFile": "Media disimpan oleh $name$",
   "linkPreviewsTitle": "Kirim pratinjau tautan",
   "linkPreviewDescription": "Previews are supported for most urls",
-  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending or receiving link previews.",
-  "mediaPermissionsTitle": "Microphone and Camera",
+  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
+  "mediaPermissionsTitle": "Mikrofon dan kamera",
   "mediaPermissionsDescription": "Izinkan akses ke kamera dan mikrofon",
-  "spellCheckTitle": "Spell Check",
+  "spellCheckTitle": "Pemeriksa Ejaan",
   "spellCheckDescription": "Aktifkan pengecek ejaan dalam kotak pesan",
-  "spellCheckDirty": "You must restart Session to apply your new settings",
+  "spellCheckDirty": "Anda harus muat ulang Session untuk terima pengaturan baru anda",
   "notifications": "Pemberitahuan",
   "readReceiptSettingDescription": "See and share when messages have been read (enables read receipts in all sessions).",
   "readReceiptSettingTitle": "Pesan terbaca",
@@ -199,17 +202,17 @@
   "timerOption_1_day": "1 hari",
   "timerOption_1_week": "1 minggu",
   "disappearingMessages": "Pesan hilang",
-  "changeNickname": "Change Nickname",
+  "changeNickname": "Ubah Nama Panggilan",
   "clearNickname": "Clear nickname",
-  "nicknamePlaceholder": "New Nickname",
-  "changeNicknameMessage": "Enter a nickname for this user",
+  "nicknamePlaceholder": "Nama panggilan baru",
+  "changeNicknameMessage": "Beri nama panggilan untuk pengguna ini",
   "timerOption_0_seconds_abbreviated": "padam",
   "timerOption_5_seconds_abbreviated": "5d",
   "timerOption_10_seconds_abbreviated": "10d",
   "timerOption_30_seconds_abbreviated": "30d",
-  "timerOption_1_minute_abbreviated": "1m",
-  "timerOption_5_minutes_abbreviated": "5m",
-  "timerOption_30_minutes_abbreviated": "30m",
+  "timerOption_1_minute_abbreviated": "1mnt",
+  "timerOption_5_minutes_abbreviated": "5mnt",
+  "timerOption_30_minutes_abbreviated": "30mnt",
   "timerOption_1_hour_abbreviated": "1j",
   "timerOption_6_hours_abbreviated": "6j",
   "timerOption_12_hours_abbreviated": "12j",
@@ -220,13 +223,13 @@
   "youDisabledDisappearingMessages": "Anda menonaktifkan pesan menghilang.",
   "timerSetTo": "Waktu pesan hilang diatur ke $time$",
   "noteToSelf": "Catatan Pribadi",
-  "hideMenuBarTitle": "Hide Menu Bar",
+  "hideMenuBarTitle": "Sembunyikan Meny Bar",
   "hideMenuBarDescription": "Toggle system menu bar visibility",
   "startConversation": "Start new conversation…",
   "invalidNumberError": "Nomor salah",
   "failedResolveOns": "Failed to resolve ONS name",
   "successUnlinked": "Sukses memutus koneksi perangkat",
-  "autoUpdateSettingTitle": "Auto Update",
+  "autoUpdateSettingTitle": "Pembaruan Otomatis",
   "autoUpdateSettingDescription": "Automatically check for updates on launch",
   "autoUpdateNewVersionTitle": "Tersedia Session versi terbaru",
   "autoUpdateNewVersionMessage": "Tersedia versi terbaru Session.",
@@ -235,7 +238,7 @@
   "autoUpdateLaterButtonLabel": "Nanti",
   "autoUpdateDownloadButtonLabel": "Unduh",
   "autoUpdateDownloadedMessage": "The new update has been downloaded.",
-  "autoUpdateDownloadInstructions": "Would you like to download the update?",
+  "autoUpdateDownloadInstructions": "Apakah anda ingin mengunduh pembaharuan?",
   "leftTheGroup": "$name$ telah meninggalkan grup.",
   "multipleLeftTheGroup": "$name$ telah meninggalkan grup",
   "updatedTheGroup": "Grup diperbarui",
@@ -268,23 +271,23 @@
   "noContactsForGroup": "anda belum memiliki kontak",
   "failedToAddAsModerator": "Failed to add user as moderator",
   "failedToRemoveFromModerator": "Failed to remove user from the moderator list",
-  "copyMessage": "Copy message text",
+  "copyMessage": "Salin pesan",
   "selectMessage": "Select message",
   "editGroup": "Ubah grup",
-  "editGroupName": "Edit group name",
+  "editGroupName": "Ubah Nama Grup",
   "updateGroupDialogTitle": "Memperbarui $name$...",
   "showRecoveryPhrase": "Kata pemulihan",
   "yourSessionID": "Session ID anda",
-  "setAccountPasswordTitle": "Set Account Password",
+  "setAccountPasswordTitle": "Atur Kata Sandi Akun",
   "setAccountPasswordDescription": "Require password to unlock Session’s screen. You can still receive message notifications while Screen Lock is enabled. Session’s notification settings allow you to customize information that is displayed",
-  "changeAccountPasswordTitle": "Change Account Password",
-  "changeAccountPasswordDescription": "Change your password",
+  "changeAccountPasswordTitle": "Ubah Kata Sandi Akun",
+  "changeAccountPasswordDescription": "Ubah Kata Sandi",
   "removeAccountPasswordTitle": "Remove Account Password",
   "removeAccountPasswordDescription": "Remove the password associated with your account",
   "enterPassword": "Please enter your password",
   "confirmPassword": "Confirm password",
   "pasteLongPasswordToastTitle": "The clipboard content exceeds the maximum password length of $max_pwd_len$ characters.",
-  "showRecoveryPhrasePasswordRequest": "Please enter your password",
+  "showRecoveryPhrasePasswordRequest": "Silahkan masukan kata sandi Anda",
   "recoveryPhraseSavePromptMain": "Kata pemulihan adalah kunci Session ID -- bisa digunakan untuk mengembalikan Session ID ketika anda kehilangan perangkat. Simpan kata pemulihan di tempat yang aman dan jangan berikan kepada siapapun",
   "invalidOpenGroupUrl": "Invalid URL",
   "copiedToClipboard": "Salin ke clipboard",
@@ -428,8 +431,30 @@
   "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
   "deviceOnly": "Device Only",
   "entireAccount": "Entire Account",
+  "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
+  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
+  "iAmSure": "I am sure",
   "recoveryPhraseSecureTitle": "You're almost finished!",
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
-  "notificationSubtitle": "Notifications - $setting$"
+  "notificationSubtitle": "Notifications - $setting$",
+  "deletionTypeTitle": "Deletion Type",
+  "deleteJustForMe": "Delete just for me",
+  "messageDeletedPlaceholder": "This message has been deleted",
+  "messageDeleted": "Message deleted",
+  "surveyTitle": "Take our Session Survey",
+  "goToOurSurvey": "Go to our survey",
+  "incomingCall": "Incoming call",
+  "accept": "Accept",
+  "decline": "Decline",
+  "endCall": "End call",
+  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
+  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
+  "unableToCall": "cancel your ongoing call first",
+  "unableToCallTitle": "Cannot start new call",
+  "callMissed": "Missed call from $name$",
+  "callMissedTitle": "Call missed",
+  "startVideoCall": "Start Video Call",
+  "noCameraFound": "No camera found",
+  "noAudioInputFound": "No audio input found"
 }
