--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -125,13 +125,16 @@
   "moreInformation": "Maggiori informazioni",
   "resend": "Reinvia",
   "deleteMessage": "Cancella Messaggio",
+  "deleteMessageQuestion": "Delete message?",
+  "deleteMessagesQuestion": "Delete messages?",
   "deleteMessages": "Elimina messaggi",
   "deleteMessageForEveryone": "Elimina Messaggio Per Tutti",
+  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
   "deleteMessagesForEveryone": "Elimina Messaggi Per Tutti",
   "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "Rimuovere definitivamente la conversazione?",
   "clearAllData": "Elimina tutti i dati",
-  "deleteAccountWarning": "Ciò eliminerà permanentemente i tuoi messaggi, sessioni e contatti.",
+  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
   "deleteContactConfirmation": "Sei sicuro di voler eliminare questa conversazione?",
   "quoteThumbnailAlt": "Anteprima dell'immagine dal messaggio citato",
   "imageAttachmentAlt": "Immagine allegata a un messaggio",
@@ -150,7 +153,7 @@
   "savedTheFile": "Media salvati da $name$",
   "linkPreviewsTitle": "Invia Anteprime Dei Link",
   "linkPreviewDescription": "Previews are supported for most urls.",
-  "linkPreviewsConfirmMessage": "Non avrai la protezione completa dei metadati quando invii o ricevi le anteprime dei link.",
+  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
   "mediaPermissionsTitle": "Microfono e Fotocamera",
   "mediaPermissionsDescription": "Concedi l'accesso alla fotocamera e al microfono",
   "spellCheckTitle": "Controllo ortografico",
@@ -337,8 +340,8 @@
   "onlyAdminCanRemoveMembersDesc": "Solo il creatore del gruppo può rimuovere gli utenti",
   "createAccount": "Create Account",
   "signIn": "Accedi",
-  "startInTrayTitle": "Start in Tray",
-  "startInTrayDescription": "Start Session as a minified app ",
+  "startInTrayTitle": "Avvia nel Pannello",
+  "startInTrayDescription": "Avvia Session come app minimizzata ",
   "yourUniqueSessionID": "Ecco la tua Sessione ID",
   "allUsersAreRandomly...": "La Sessione ID è l'indirizzo univoco che le persone possono utilizzare per contattarti su una Sessione. Senza alcuna connessione con la tua vera identità, la Sessione ID è totalmente anonimo e privato fin dal incezione.",
   "getStarted": "Inizia qui",
@@ -421,15 +424,37 @@
   "latestUnreadIsAbove": "Il primo messaggio non letto è sopra",
   "sendRecoveryPhraseTitle": "Invio Frase Di Recupero",
   "sendRecoveryPhraseMessage": "Stai tentando di inviare la frase di recupero che può essere utilizzata per accedere al tuo account. Sei sicuro di voler inviare questo messaggio?",
-  "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
-  "dialogClearAllDataDeletionFailedDesc": "Data not deleted with an unknown error. Do you want to delete data from just this device?",
-  "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
-  "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
-  "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
-  "deviceOnly": "Device Only",
-  "entireAccount": "Entire Account",
-  "recoveryPhraseSecureTitle": "You're almost finished!",
-  "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
-  "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
-  "notificationSubtitle": "Notifiche - $setting$"
+  "dialogClearAllDataDeletionFailedTitle": "Dati non eliminati",
+  "dialogClearAllDataDeletionFailedDesc": "Dati non eliminati a causa di un errore sconosciuto. Vuoi eliminare i dati solo da questo dispositivo?",
+  "dialogClearAllDataDeletionFailedTitleQuestion": "Vuoi eliminare i dati solo da questo dispositivo?",
+  "dialogClearAllDataDeletionFailedMultiple": "Dati non eliminati da questi nodi di servizio: $snodes$",
+  "dialogClearAllDataDeletionQuestion": "Vuoi formattare solo questo dispositivo o cancellare del tutto l'account?",
+  "deviceOnly": "Solo dispositivo",
+  "entireAccount": "Tutto l'account",
+  "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
+  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
+  "iAmSure": "I am sure",
+  "recoveryPhraseSecureTitle": "Hai quasi finito!",
+  "recoveryPhraseRevealMessage": "Proteggi il tuo account salvando la tua frase di recupero. Mostra la tua frase di recupero, quindi salvala in modo sicuro per proteggerla.",
+  "recoveryPhraseRevealButtonText": "Mostra Frase di Recupero",
+  "notificationSubtitle": "Notifiche - $setting$",
+  "deletionTypeTitle": "Deletion Type",
+  "deleteJustForMe": "Delete just for me",
+  "messageDeletedPlaceholder": "This message has been deleted",
+  "messageDeleted": "Message deleted",
+  "surveyTitle": "Take our Session Survey",
+  "goToOurSurvey": "Go to our survey",
+  "incomingCall": "Incoming call",
+  "accept": "Accept",
+  "decline": "Decline",
+  "endCall": "End call",
+  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
+  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
+  "unableToCall": "cancel your ongoing call first",
+  "unableToCallTitle": "Cannot start new call",
+  "callMissed": "Missed call from $name$",
+  "callMissedTitle": "Call missed",
+  "startVideoCall": "Start Video Call",
+  "noCameraFound": "No camera found",
+  "noAudioInputFound": "No audio input found"
 }
