--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -36,11 +36,11 @@
   "enterSessionIDOrONSName": "Enter Session ID or ONS name",
   "loading": "読込中...",
   "optimizingApplication": "アプリケーションを最適化しています...",
-  "done": "Done",
+  "done": "完了",
   "me": "自分",
   "view": "見る",
   "youLeftTheGroup": "グループを抜けました",
-  "youGotKickedFromGroup": "You were removed from the group.",
+  "youGotKickedFromGroup": "あなたはこのグループから削除されました",
   "unreadMessage": "Unread Message",
   "unreadMessages": "Unread Messages",
   "debugLogExplanation": "このログはネット上に公開され，開発者が閲覧します。提出前に編集することができます。",
@@ -125,13 +125,16 @@
   "moreInformation": "詳細",
   "resend": "再送",
   "deleteMessage": "メッセージの削除",
+  "deleteMessageQuestion": "Delete message?",
+  "deleteMessagesQuestion": "Delete messages?",
   "deleteMessages": "メッセージを削除",
   "deleteMessageForEveryone": "全員からメッセージを削除",
+  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
   "deleteMessagesForEveryone": "全員からメッセージを削除",
   "deleteForEveryone": "全員から削除",
   "deleteConversationConfirmation": "この会話を完全に消去しますが，よろしいですか？",
   "clearAllData": "すべてのデータを消去する",
-  "deleteAccountWarning": "これにより、メッセージ、Session、連絡先が完全に削除されます。",
+  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
   "deleteContactConfirmation": "この会話を削除してもよろしいですか？",
   "quoteThumbnailAlt": "引用されたメッセージから画像のサムネール",
   "imageAttachmentAlt": "メッセージにイメージを添付する",
@@ -150,7 +153,7 @@
   "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "リンクプレビューを送る",
   "linkPreviewDescription": "プレビューはImgur、Instagram、Pinterest、RedditおよびYouTubeリンクをサポートしています",
-  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending or receiving link previews.",
+  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
   "mediaPermissionsTitle": "マイクとカメラ",
   "mediaPermissionsDescription": "カメラとマイクへのアクセスを許可する",
   "spellCheckTitle": "スペルチェック",
@@ -201,7 +204,7 @@
   "disappearingMessages": "消えるメッセージ",
   "changeNickname": "Change Nickname",
   "clearNickname": "Clear nickname",
-  "nicknamePlaceholder": "New Nickname",
+  "nicknamePlaceholder": "新しいニックネーム",
   "changeNicknameMessage": "Enter a nickname for this user",
   "timerOption_0_seconds_abbreviated": "オフ",
   "timerOption_5_seconds_abbreviated": "5秒",
@@ -428,8 +431,30 @@
   "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
   "deviceOnly": "Device Only",
   "entireAccount": "Entire Account",
+  "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
+  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
+  "iAmSure": "I am sure",
   "recoveryPhraseSecureTitle": "You're almost finished!",
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
-  "notificationSubtitle": "Notifications - $setting$"
+  "notificationSubtitle": "Notifications - $setting$",
+  "deletionTypeTitle": "Deletion Type",
+  "deleteJustForMe": "Delete just for me",
+  "messageDeletedPlaceholder": "This message has been deleted",
+  "messageDeleted": "Message deleted",
+  "surveyTitle": "Take our Session Survey",
+  "goToOurSurvey": "Go to our survey",
+  "incomingCall": "Incoming call",
+  "accept": "Accept",
+  "decline": "Decline",
+  "endCall": "End call",
+  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
+  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
+  "unableToCall": "cancel your ongoing call first",
+  "unableToCallTitle": "Cannot start new call",
+  "callMissed": "Missed call from $name$",
+  "callMissedTitle": "Call missed",
+  "startVideoCall": "Start Video Call",
+  "noCameraFound": "No camera found",
+  "noAudioInputFound": "No audio input found"
 }
