--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -125,13 +125,16 @@
   "moreInformation": "Więcej informacji",
   "resend": "Wyślij ponownie",
   "deleteMessage": "Usuń wiadomość",
+  "deleteMessageQuestion": "Delete message?",
+  "deleteMessagesQuestion": "Delete messages?",
   "deleteMessages": "Usuń konwersację",
   "deleteMessageForEveryone": "Usuń wiadomość dla wszystkich",
+  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
   "deleteMessagesForEveryone": "Usuń wiadomość dla wszystkich",
   "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "Usunąć trwale tę konwersację?",
   "clearAllData": "Wyczyść wszystkie dane",
-  "deleteAccountWarning": "Spowoduje to trwałe usunięcie wiadomości, Session i kontaktów.",
+  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
   "deleteContactConfirmation": "Czy na pewno chcesz usunąć tę rozmowę?",
   "quoteThumbnailAlt": "Miniatura obrazu z cytowanej wiadomości",
   "imageAttachmentAlt": "Zdjęcie załączone do wiadomości",
@@ -150,7 +153,7 @@
   "savedTheFile": "Media zapisane przez $name$",
   "linkPreviewsTitle": "Podgląd linków",
   "linkPreviewDescription": "Previews are supported for most urls.",
-  "linkPreviewsConfirmMessage": "Nie będziesz miał pełnej ochrony metadanych podczas wysyłania lub odbierania podglądu.",
+  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
   "mediaPermissionsTitle": "Mikrofon i aparat",
   "mediaPermissionsDescription": "Zezwól na dostęp do kamery i mikrofonu",
   "spellCheckTitle": "Sprawdzanie pisowni",
@@ -337,8 +340,8 @@
   "onlyAdminCanRemoveMembersDesc": "Tylko twórca grupy może usunąć użytkowników",
   "createAccount": "Create Account",
   "signIn": "Zaloguj się",
-  "startInTrayTitle": "Start in Tray",
-  "startInTrayDescription": "Start Session as a minified app ",
+  "startInTrayTitle": "Rozpocznij w zasobniku",
+  "startInTrayDescription": "Uruchom Session jako zminimalizowaną aplikację ",
   "yourUniqueSessionID": "Przywitaj się z identyfikatorem Session",
   "allUsersAreRandomly...": "Twój identyfikator Session to unikalny adres, za pomocą którego można się z Tobą kontaktować w Sesji. Bez połączenia z twoją prawdziwą tożsamością, identyfikator Session jest z założenia całkowicie anonimowy i prywatny.",
   "getStarted": "Rozpocznij",
@@ -421,15 +424,37 @@
   "latestUnreadIsAbove": "Pierwsza nieprzeczytana wiadomość jest powyżej",
   "sendRecoveryPhraseTitle": "Wysyłanie frazy odzyskiwania",
   "sendRecoveryPhraseMessage": "Próbujesz wysłać frazę odzyskiwania, która może być użyta do uzyskania dostępu do twojego konta. Czy na pewno chcesz wysłać tę wiadomość?",
-  "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
-  "dialogClearAllDataDeletionFailedDesc": "Data not deleted with an unknown error. Do you want to delete data from just this device?",
-  "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
-  "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
-  "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
-  "deviceOnly": "Device Only",
-  "entireAccount": "Entire Account",
-  "recoveryPhraseSecureTitle": "You're almost finished!",
-  "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
-  "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
-  "notificationSubtitle": "Powiadomienia - $setting$"
+  "dialogClearAllDataDeletionFailedTitle": "Dane nie zostały usunięte",
+  "dialogClearAllDataDeletionFailedDesc": "Dane nie zostały usunięte z nieznanego błędu. Czy chcesz usunąć dane tylko z tego urządzenia?",
+  "dialogClearAllDataDeletionFailedTitleQuestion": "Czy chcesz usunąć dane tylko z tego urządzenia?",
+  "dialogClearAllDataDeletionFailedMultiple": "Dane nie zostały usunięte przez te węzły usługowe: $snodes$",
+  "dialogClearAllDataDeletionQuestion": "Czy chcesz wyczyścić tylko to urządzenie, czy usunąć całe swoje konto?",
+  "deviceOnly": "Tylko urządzenie",
+  "entireAccount": "Całe konto",
+  "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
+  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
+  "iAmSure": "I am sure",
+  "recoveryPhraseSecureTitle": "Prawie gotowe!",
+  "recoveryPhraseRevealMessage": "Zabezpiecz swoje konto zapisując frazę odzyskiwania. Zobacz frazę odzyskiwania, a następnie przechowuj ją bezpiecznie w celu zabezpieczenia.",
+  "recoveryPhraseRevealButtonText": "Pokaż frazę odzyskiwania",
+  "notificationSubtitle": "Powiadomienia - $setting$",
+  "deletionTypeTitle": "Deletion Type",
+  "deleteJustForMe": "Delete just for me",
+  "messageDeletedPlaceholder": "This message has been deleted",
+  "messageDeleted": "Message deleted",
+  "surveyTitle": "Take our Session Survey",
+  "goToOurSurvey": "Go to our survey",
+  "incomingCall": "Incoming call",
+  "accept": "Accept",
+  "decline": "Decline",
+  "endCall": "End call",
+  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
+  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
+  "unableToCall": "cancel your ongoing call first",
+  "unableToCallTitle": "Cannot start new call",
+  "callMissed": "Missed call from $name$",
+  "callMissedTitle": "Call missed",
+  "startVideoCall": "Start Video Call",
+  "noCameraFound": "No camera found",
+  "noAudioInputFound": "No audio input found"
 }
