--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -125,13 +125,16 @@
   "moreInformation": "Mais informações",
   "resend": "Reenviar",
   "deleteMessage": "Excluir Mensagem",
+  "deleteMessageQuestion": "Delete message?",
+  "deleteMessagesQuestion": "Delete messages?",
   "deleteMessages": "Apagar mensagens",
   "deleteMessageForEveryone": "Excluír mensagem para todos",
+  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
   "deleteMessagesForEveryone": "Excluír mensagens para todos",
   "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "Você deseja apagar esta conversa definitivamente?",
   "clearAllData": "Limpar todos os dados",
-  "deleteAccountWarning": "Isso excluirá permanentemente suas mensagens, sessões e contatos.",
+  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
   "deleteContactConfirmation": "Tem certeza de que deseja excluir esta conversa?",
   "quoteThumbnailAlt": "Miniatura da imagem na citação",
   "imageAttachmentAlt": "Imagem anexa à mensagem",
@@ -150,7 +153,7 @@
   "savedTheFile": "Mídia salva por $name$",
   "linkPreviewsTitle": "Enviar Pré-Visualizações De Links",
   "linkPreviewDescription": "Previews are supported for most urls.",
-  "linkPreviewsConfirmMessage": "Você não terá proteção de metadados completa ao enviar ou receber pré-visualizações de links.",
+  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
   "mediaPermissionsTitle": "Microfone e Câmera",
   "mediaPermissionsDescription": "Permitir acesso à câmera e ao microfone",
   "spellCheckTitle": "Corretor ortográfico",
@@ -179,7 +182,7 @@
   "timestamp_s": "Agora",
   "timestamp_m": "1 minuto",
   "timestamp_h": "1 hora",
-  "timestampFormat_M": "MMM D",
+  "timestampFormat_M": "D MMM",
   "messageBodyMissing": "Por favor, insira o corpo da mensagem.",
   "unblockToSend": "Desbloquear este contato para enviar uma mensagem.",
   "unblockGroupToSend": "Desbloquear este grupo para enviar uma mensagem.",
@@ -255,16 +258,16 @@
   "userUnbanFailed": "Desbanimento falhou!",
   "banUser": "Banir usuário",
   "banUserConfirm": "Are you sure you want to ban user?",
-  "banUserAndDeleteAll": "Ban and Delete All",
-  "banUserAndDeleteAllConfirm": "Are you sure you want to ban the user and delete all his messages?",
+  "banUserAndDeleteAll": "Banir e Excluir Tudo",
+  "banUserAndDeleteAllConfirm": "Tu tens certeza de que queres banir o usuário e apagar todas as suas mensagens?",
   "userBanned": "User banned successfully",
   "userBanFailed": "Banimento falhou!",
   "leaveGroup": "Sair Do Grupo",
   "leaveAndRemoveForEveryone": "Sair do Grupo e remover para todos",
   "leaveGroupConfirmation": "Tem certeza de que deseja sair deste grupo?",
-  "leaveGroupConfirmationAdmin": "As you are the admin of this group, if you leave it it will be removed for every current members. Are you sure you want to leave this group?",
+  "leaveGroupConfirmationAdmin": "Como és o administrador deste grupo, se deixares ele o mesmo será removido para todos os membros atuais. Tens certeza de que queres deixar este grupo?",
   "cannotRemoveCreatorFromGroup": "Não é possível remover esse usuário",
-  "cannotRemoveCreatorFromGroupDesc": "You cannot remove this user as they are the creator of the group.",
+  "cannotRemoveCreatorFromGroupDesc": "Tu não podes remover este usuário visto que ele é o criador do grupo.",
   "noContactsForGroup": "Você ainda não possui contatos",
   "failedToAddAsModerator": "Falha ao adicionar usuário como moderador",
   "failedToRemoveFromModerator": "Falha ao remover usuário da lista de moderadores",
@@ -276,7 +279,7 @@
   "showRecoveryPhrase": "Frase de recuperação",
   "yourSessionID": "Seu ID Session",
   "setAccountPasswordTitle": "Definir senha da conta",
-  "setAccountPasswordDescription": "Require password to unlock Session’s screen. You can still receive message notifications while Screen Lock is enabled. Session’s notification settings allow you to customize information that is displayed",
+  "setAccountPasswordDescription": "Requer senha para desbloquear a tela do Session. Tu ainda podes receber notificações enquanto o Bloqueio de Tela está ativado. As configurações de notificação do Session te permitem customizar a informação que é mostrada",
   "changeAccountPasswordTitle": "Alterar Senha da Conta",
   "changeAccountPasswordDescription": "Altere sua senha",
   "removeAccountPasswordTitle": "Remover Senha da Conta",
@@ -337,8 +340,8 @@
   "onlyAdminCanRemoveMembersDesc": "Somente o criador do grupo pode remover usuários",
   "createAccount": "Create Account",
   "signIn": "Iniciar sessão",
-  "startInTrayTitle": "Start in Tray",
-  "startInTrayDescription": "Start Session as a minified app ",
+  "startInTrayTitle": "Iniciar na Bandeja",
+  "startInTrayDescription": "Iniciar Session como um aplicativo minimizado ",
   "yourUniqueSessionID": "Diga olá ao seu ID Session",
   "allUsersAreRandomly...": "Seu ID Session é o endereço exclusivo que as pessoas podem usar para entrar em contato com você no Session. Sem conexão com sua identidade real, seu ID Session é totalmente anônimo e privado por definição.",
   "getStarted": "Começar",
@@ -354,11 +357,11 @@
   "linkDevice": "Sincronize dispositivo",
   "restoreUsingRecoveryPhrase": "Restaurar sua conta",
   "or": "ou",
-  "ByUsingThisService...": "By using this service, you agree to our <a href=\"https://getsession.org/legal/#tos\">Terms of Service</a> and <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Privacy Policy</a>",
+  "ByUsingThisService...": "Ao utilizar este serviço, tu concordas com os nossos <a href=\"https://getsession.org/legal/#tos\">Termos de Serviço</a> e <a href=\"https://getsession.org/privacy-policy/\" target=\"_blank\">Políticas de Privacidade</a>",
   "beginYourSession": "Inicie seu Session.",
   "welcomeToYourSession": "Bem-vindo(a) ao seu Session",
   "newSession": "Nova Sessão",
-  "searchFor...": "Search for conversations or contacts",
+  "searchFor...": "Procurar por conversas ou contatos",
   "enterSessionID": "Digite o ID Session",
   "enterSessionIDOfRecipient": "Digite o ID Session do destinatário",
   "usersCanShareTheir...": "Os usuários podem compartilhar seus IDs Session acessando as configurações da conta e tocando em Compartilhar ID Session, ou compartilhando o código QR.",
@@ -390,9 +393,9 @@
   "translation": "Tradução",
   "closedGroupInviteFailTitle": "Convite do grupo falhou",
   "closedGroupInviteFailTitlePlural": "Convites do grupo falharam",
-  "closedGroupInviteFailMessage": "Unable to successfully invite a group member",
-  "closedGroupInviteFailMessagePlural": "Unable to successfully invite all group members",
-  "closedGroupInviteOkText": "Retry invitations",
+  "closedGroupInviteFailMessage": "Incapaz de convidar sucedidamente um membro do grupo",
+  "closedGroupInviteFailMessagePlural": "Incapaz de convidar sucedidamente todos os membros do grupo",
+  "closedGroupInviteOkText": "Tentar convidar novamente",
   "closedGroupInviteSuccessTitlePlural": "Convites de Grupo Concluídos",
   "closedGroupInviteSuccessTitle": "Convite de Grupo Bem-Sucedido",
   "closedGroupInviteSuccessMessage": "Convidados com sucesso membros do grupo fechado",
@@ -418,18 +421,40 @@
   "unpinConversation": "Desafixar conversa",
   "pinConversationLimitTitle": "Limite de conversas fixadas",
   "pinConversationLimitToastDescription": "Você só pode fixar $number$ conversas",
-  "latestUnreadIsAbove": "First unread message is above",
+  "latestUnreadIsAbove": "A primeira mensagem não lida está acima",
   "sendRecoveryPhraseTitle": "Enviando frase de recuperação",
-  "sendRecoveryPhraseMessage": "You are attempting to send your recovery phrase which can be used to access your account. Are you sure you want to send this message?",
-  "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
-  "dialogClearAllDataDeletionFailedDesc": "Data not deleted with an unknown error. Do you want to delete data from just this device?",
-  "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
-  "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
-  "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
-  "deviceOnly": "Device Only",
-  "entireAccount": "Entire Account",
-  "recoveryPhraseSecureTitle": "You're almost finished!",
-  "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
-  "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
-  "notificationSubtitle": "Notifications - $setting$"
+  "sendRecoveryPhraseMessage": "Tu estás tentando enviar a tua frase de recuperação qual pode ser utilizada para acessar a tua conta. Tu tens certeza de que queres enviar esta mensagem?",
+  "dialogClearAllDataDeletionFailedTitle": "Dados não excluídos",
+  "dialogClearAllDataDeletionFailedDesc": "Dados não excluídos com um erro desconhecido. Tu queres excluir os dados apenas deste dispositivo?",
+  "dialogClearAllDataDeletionFailedTitleQuestion": "Tu gostarias de excluir os dados apenas deste dispositivo?",
+  "dialogClearAllDataDeletionFailedMultiple": "Dados não excluídos por estes Nódulos de Serviço: $snodes$",
+  "dialogClearAllDataDeletionQuestion": "Tu gostarias de limpar apenas este dispositivo, ou excluir toda a sua conta?",
+  "deviceOnly": "Só Dispositivo",
+  "entireAccount": "Toda a Conta",
+  "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
+  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
+  "iAmSure": "I am sure",
+  "recoveryPhraseSecureTitle": "Tu estás quase acabando!",
+  "recoveryPhraseRevealMessage": "Proteja a sua conta salvando a sua frase de recuperação. Revele a sua frase de recuperação e então armazene-a com segurança para protegê-la.",
+  "recoveryPhraseRevealButtonText": "Revelar Frase de Recuperação",
+  "notificationSubtitle": "Notificações - $setting$",
+  "deletionTypeTitle": "Deletion Type",
+  "deleteJustForMe": "Delete just for me",
+  "messageDeletedPlaceholder": "This message has been deleted",
+  "messageDeleted": "Message deleted",
+  "surveyTitle": "Take our Session Survey",
+  "goToOurSurvey": "Go to our survey",
+  "incomingCall": "Incoming call",
+  "accept": "Accept",
+  "decline": "Decline",
+  "endCall": "End call",
+  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
+  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
+  "unableToCall": "cancel your ongoing call first",
+  "unableToCallTitle": "Cannot start new call",
+  "callMissed": "Missed call from $name$",
+  "callMissedTitle": "Call missed",
+  "startVideoCall": "Start Video Call",
+  "noCameraFound": "No camera found",
+  "noAudioInputFound": "No audio input found"
 }
