--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -125,13 +125,16 @@
   "moreInformation": "Больше информации",
   "resend": "Отправить ещё раз",
   "deleteMessage": "Удалить сообщение",
+  "deleteMessageQuestion": "Delete message?",
+  "deleteMessagesQuestion": "Delete messages?",
   "deleteMessages": "Удалить сообщения",
   "deleteMessageForEveryone": "Удалить сообщение для всех",
+  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
   "deleteMessagesForEveryone": "Удалить сообщения для всех",
   "deleteForEveryone": "Удалить для всех",
   "deleteConversationConfirmation": "Удалить эту беседу без возможности восстановления?",
   "clearAllData": "Очистить все данные",
-  "deleteAccountWarning": "Это навсегда удалит ваши сообщения, сессии и контакты.",
+  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
   "deleteContactConfirmation": "Вы уверены, что хотите удалить эту беседу?",
   "quoteThumbnailAlt": "Миниатюра изображения из цитируемого сообщения",
   "imageAttachmentAlt": "Изображение, прикрепленное к сообщению",
@@ -150,7 +153,7 @@
   "savedTheFile": "$name$ сохранил медиафайл",
   "linkPreviewsTitle": "Отправлять предпросмотр ссылки",
   "linkPreviewDescription": "Предпросмотр доступен для большинства URL",
-  "linkPreviewsConfirmMessage": "У вас не будет полной защиты метаданных при отправке или получении предпросмотра ссылок.",
+  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
   "mediaPermissionsTitle": "Микрофон и камера",
   "mediaPermissionsDescription": "Разрешить доступ к камере и микрофону",
   "spellCheckTitle": "Проверка орфографии",
@@ -337,8 +340,8 @@
   "onlyAdminCanRemoveMembersDesc": "Только создатель группы может удалять пользователей",
   "createAccount": "Создать аккаунт",
   "signIn": "Войти",
-  "startInTrayTitle": "Start in Tray",
-  "startInTrayDescription": "Start Session as a minified app ",
+  "startInTrayTitle": "Запускать в трее",
+  "startInTrayDescription": "Запускать Sessions как свернутое приложение ",
   "yourUniqueSessionID": "Познакомьтесь со своим Session ID",
   "allUsersAreRandomly...": "Ваш Session ID - это уникальный адрес, который другие пользователи могут использовать для связи с вами при помощи Session. Поскольку ваш Session ID никак не связан с вашей настоящей личностью, он по определению является полностью анонимным и конфиденциальным.",
   "getStarted": "Начать",
@@ -421,15 +424,37 @@
   "latestUnreadIsAbove": "Первое непрочитанное сообщение находится выше",
   "sendRecoveryPhraseTitle": "Отправка секретной фразы",
   "sendRecoveryPhraseMessage": "Вы пытаетесь отправить вашу секретную фразу, которая может быть использована для доступа к вашей учетной записи. Вы уверены, что хотите отправить это сообщение?",
-  "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
-  "dialogClearAllDataDeletionFailedDesc": "Data not deleted with an unknown error. Do you want to delete data from just this device?",
-  "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
-  "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
-  "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
-  "deviceOnly": "Device Only",
-  "entireAccount": "Entire Account",
-  "recoveryPhraseSecureTitle": "You're almost finished!",
-  "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
-  "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
-  "notificationSubtitle": "Уведомления - $setting$"
+  "dialogClearAllDataDeletionFailedTitle": "Данные не удалены",
+  "dialogClearAllDataDeletionFailedDesc": "Данные не удалены из-за неизвестной ошибки. Вы хотите удалить данные только с этого устройства?",
+  "dialogClearAllDataDeletionFailedTitleQuestion": "Вы хотите удалить данные только с этого устройства?",
+  "dialogClearAllDataDeletionFailedMultiple": "Данные не удалены узлами сервиса. Номера узлов: $snodes$",
+  "dialogClearAllDataDeletionQuestion": "Вы хотите очистить только это устройство или полностью удалить ваш аккаунт?",
+  "deviceOnly": "Только устройство",
+  "entireAccount": "Полностью аккаунт",
+  "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
+  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
+  "iAmSure": "I am sure",
+  "recoveryPhraseSecureTitle": "Вы почти закончили!",
+  "recoveryPhraseRevealMessage": "Обезопасьте свой аккаунт, сохранив вашу секретную фразу. Посмотрите вашу секретную фразу, затем сохраните ее в безопасном месте.",
+  "recoveryPhraseRevealButtonText": "Показать секретную фразу",
+  "notificationSubtitle": "Уведомления - $setting$",
+  "deletionTypeTitle": "Deletion Type",
+  "deleteJustForMe": "Delete just for me",
+  "messageDeletedPlaceholder": "This message has been deleted",
+  "messageDeleted": "Message deleted",
+  "surveyTitle": "Take our Session Survey",
+  "goToOurSurvey": "Go to our survey",
+  "incomingCall": "Incoming call",
+  "accept": "Accept",
+  "decline": "Decline",
+  "endCall": "End call",
+  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
+  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
+  "unableToCall": "cancel your ongoing call first",
+  "unableToCallTitle": "Cannot start new call",
+  "callMissed": "Missed call from $name$",
+  "callMissedTitle": "Call missed",
+  "startVideoCall": "Start Video Call",
+  "noCameraFound": "No camera found",
+  "noAudioInputFound": "No audio input found"
 }
