--- a/_locales/si/messages.json
+++ b/_locales/si/messages.json
@@ -1,5 +1,5 @@
 {
-  "privacyPolicy": "කොන්දේසි සහ රහස්‍යතා ප්‍රතිපත්තිය",
+  "privacyPolicy": "නියම සහ රහස්‍යතා ප්‍රතිපත්තිය",
   "copyErrorAndQuit": "දෝෂය පිටපත් කර ඉවත්වන්න",
   "unknown": "Unknown",
   "databaseError": "දත්තසමුදායේ දෝෂයකි",
@@ -37,7 +37,7 @@
   "loading": "පූරණය වෙමින්…",
   "optimizingApplication": "Optimizing application...",
   "done": "Done",
-  "me": "Me",
+  "me": "මා",
   "view": "View",
   "youLeftTheGroup": "You have left the group.",
   "youGotKickedFromGroup": "You were removed from the group.",
@@ -47,7 +47,7 @@
   "debugLogError": "Something went wrong with the upload! Please consider manually adding your log to the bug you file.",
   "reportIssue": "Report an issue",
   "gotIt": "Got it",
-  "submit": "Submit",
+  "submit": "යොමන්න",
   "markAllAsRead": "Mark All as Read",
   "incomingError": "Error handling incoming message",
   "media": "මාධ්‍යය",
@@ -79,7 +79,7 @@
   "about": "පිළිබඳව",
   "speech": "Speech",
   "show": "පෙන්වන්න",
-  "sessionMessenger": "Session",
+  "sessionMessenger": "සෙෂන්",
   "search": "සොයන්න",
   "noSearchResults": "\"$searchTerm$\" සඳහා සෙවුම් ප්‍රතිඵල නැත",
   "conversationsHeader": "සම්භාෂණ",
@@ -119,19 +119,22 @@
   "from": "වෙතින්:",
   "to": "වෙත:",
   "sent": "යැවිණි",
-  "received": "Received",
+  "received": "ලැබුණි",
   "sendMessage": "පණිවිඩය",
   "groupMembers": "{group} සාමාජිකයින්",
   "moreInformation": "තව තොරතුරු",
   "resend": "නැවත යවන්න",
   "deleteMessage": "Delete Message",
+  "deleteMessageQuestion": "Delete message?",
+  "deleteMessagesQuestion": "Delete messages?",
   "deleteMessages": "Delete Messages",
   "deleteMessageForEveryone": "Delete Message For Everyone",
+  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
   "deleteMessagesForEveryone": "Delete Messages For Everyone",
   "deleteForEveryone": "Delete for Everyone",
   "deleteConversationConfirmation": "Permanently delete the messages in this conversation?",
   "clearAllData": "Clear All Data",
-  "deleteAccountWarning": "This will permanently delete your messages and contacts.",
+  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
   "deleteContactConfirmation": "Are you sure you want to delete this conversation?",
   "quoteThumbnailAlt": "Thumbnail of image from quoted message",
   "imageAttachmentAlt": "Image attached to message",
@@ -143,14 +146,14 @@
   "copySessionID": "Copy Session ID",
   "copyOpenGroupURL": "සමූහයේ ඒ.ස.නි. පිටපත්කරන්න",
   "save": "සුරකින්න",
-  "saved": "Saved",
+  "saved": "සුරැකිණි",
   "permissions": "අවසර",
   "general": "General",
   "tookAScreenshot": "$name$ took a screenshot",
   "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "සබැඳියේ පෙරදසුන් යවන්න",
   "linkPreviewDescription": "Previews are supported for most urls",
-  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending or receiving link previews.",
+  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
   "mediaPermissionsTitle": "Microphone and Camera",
   "mediaPermissionsDescription": "Allow access to camera and microphone",
   "spellCheckTitle": "Spell Check",
@@ -296,7 +299,7 @@
   "removePassword": "මුරපදය ඉවත් කරන්න",
   "maxPasswordAttempts": "Invalid Password. Would you like to reset the database?",
   "typeInOldPassword": "Please type in your old password",
-  "invalidOldPassword": "Old password is invalid",
+  "invalidOldPassword": "පරණ මුරපදය වලංගු නොවේ",
   "invalidPassword": "වලංගු නොවන මුරපදයකි",
   "noGivenPassword": "ඔබගේ මුරපදය ඇතුල් කරන්න",
   "passwordsDoNotMatch": "මුරපද නොගැලපේ",
@@ -342,7 +345,7 @@
   "yourUniqueSessionID": "Say hello to your Session ID",
   "allUsersAreRandomly...": "Your Session ID is the unique address people can use to contact you on Session. With no connection to your real identity, your Session ID is totally anonymous and private by design.",
   "getStarted": "Get started",
-  "createSessionID": "Create Session ID",
+  "createSessionID": "සෙෂන් හැඳු. සාදන්න",
   "recoveryPhrase": "Recovery Phrase",
   "enterRecoveryPhrase": "Enter your recovery phrase",
   "displayName": "Display Name",
@@ -376,7 +379,7 @@
   "createClosedGroupPlaceholder": "සමූහ නාමයක් ඇතුල් කරන්න",
   "openGroupURL": "සමූහයේ ඒ.ස.නි. විවෘත කරන්න",
   "enterAnOpenGroupURL": "විවෘත සමූහ ඒ.ස.නි. ක් ඇතුල්කරන්න",
-  "next": "Next",
+  "next": "ඊළඟ",
   "description": "විනාඩි 1",
   "invalidGroupNameTooShort": "සමූහ නාමයක් ඇතුල් කරන්න",
   "invalidGroupNameTooLong": "කෙටි සමූහ නාමයක් ඇතුල් කරන්න",
@@ -428,8 +431,30 @@
   "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
   "deviceOnly": "Device Only",
   "entireAccount": "Entire Account",
+  "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
+  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
+  "iAmSure": "I am sure",
   "recoveryPhraseSecureTitle": "You're almost finished!",
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
-  "notificationSubtitle": "දැනුම්දීම් - $setting$"
+  "notificationSubtitle": "දැනුම්දීම් - $setting$",
+  "deletionTypeTitle": "Deletion Type",
+  "deleteJustForMe": "Delete just for me",
+  "messageDeletedPlaceholder": "This message has been deleted",
+  "messageDeleted": "Message deleted",
+  "surveyTitle": "Take our Session Survey",
+  "goToOurSurvey": "Go to our survey",
+  "incomingCall": "Incoming call",
+  "accept": "Accept",
+  "decline": "Decline",
+  "endCall": "End call",
+  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
+  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
+  "unableToCall": "cancel your ongoing call first",
+  "unableToCallTitle": "Cannot start new call",
+  "callMissed": "Missed call from $name$",
+  "callMissedTitle": "Call missed",
+  "startVideoCall": "Start Video Call",
+  "noCameraFound": "No camera found",
+  "noAudioInputFound": "No audio input found"
 }
