--- a/_locales/sk/messages.json
+++ b/_locales/sk/messages.json
@@ -123,34 +123,37 @@
   "sendMessage": "Poslať správu",
   "groupMembers": "Členy skupiny",
   "moreInformation": "More information",
-  "resend": "Resend",
+  "resend": "Znovu odoslať",
   "deleteMessage": "Vymazať správu",
+  "deleteMessageQuestion": "Delete message?",
+  "deleteMessagesQuestion": "Delete messages?",
   "deleteMessages": "Zmazať správy",
-  "deleteMessageForEveryone": "Delete Message For Everyone",
-  "deleteMessagesForEveryone": "Delete Messages For Everyone",
+  "deleteMessageForEveryone": "Zmazať správu pre každého",
+  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
+  "deleteMessagesForEveryone": "Zmazať správy pre každého",
   "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "Natrvalo zmazať túto konverzáciu?",
-  "clearAllData": "Clear All Data",
-  "deleteAccountWarning": "This will permanently delete your messages and contacts.",
-  "deleteContactConfirmation": "Are you sure you want to delete this conversation?",
+  "clearAllData": "Odstrániť všetky dáta",
+  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
+  "deleteContactConfirmation": "Naozaj chcete odstrániť túto konverzáciu?",
   "quoteThumbnailAlt": "Náhľad obrázku z citovanej správy.",
   "imageAttachmentAlt": "Obrázok pripojený k správe",
   "videoAttachmentAlt": "Náhľad videa pripojený k správe",
   "lightboxImageAlt": "Obrázok z konverzácie",
   "imageCaptionIconAlt": "Ikona indukujúca, že tento obrázok má popis",
   "addACaption": "Pridaj popis...",
-  "copy": "Copy",
-  "copySessionID": "Copy Session ID",
+  "copy": "Kopírovať",
+  "copySessionID": "Kopírovať Session ID",
   "copyOpenGroupURL": "Copy Group's URL",
   "save": "Uložiť",
-  "saved": "Saved",
+  "saved": "Uložené",
   "permissions": "Povolenia",
   "general": "Všeobecné",
   "tookAScreenshot": "$name$ took a screenshot",
   "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
   "linkPreviewDescription": "Previews are supported for most urls",
-  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending or receiving link previews.",
+  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
   "mediaPermissionsTitle": "Microphone and Camera",
   "mediaPermissionsDescription": "Povoliť prústup ku kamere a mikrofónu",
   "spellCheckTitle": "Spell Check",
@@ -269,12 +272,12 @@
   "failedToAddAsModerator": "Failed to add user as moderator",
   "failedToRemoveFromModerator": "Failed to remove user from the moderator list",
   "copyMessage": "Copy message text",
-  "selectMessage": "Select message",
+  "selectMessage": "Vyberte správu",
   "editGroup": "Edit group",
-  "editGroupName": "Edit group name",
+  "editGroupName": "Upraviť názov skupiny",
   "updateGroupDialogTitle": "Updating $name$...",
   "showRecoveryPhrase": "Recovery Phrase",
-  "yourSessionID": "Your Session ID",
+  "yourSessionID": "Vaše Session ID",
   "setAccountPasswordTitle": "Set Account Password",
   "setAccountPasswordDescription": "Require password to unlock Session’s screen. You can still receive message notifications while Screen Lock is enabled. Session’s notification settings allow you to customize information that is displayed",
   "changeAccountPasswordTitle": "Change Account Password",
@@ -344,7 +347,7 @@
   "getStarted": "Get started",
   "createSessionID": "Create Session ID",
   "recoveryPhrase": "Recovery Phrase",
-  "enterRecoveryPhrase": "Enter your recovery phrase",
+  "enterRecoveryPhrase": "Zadajte vašu obnovovaciu frázu",
   "displayName": "Display Name",
   "anonymous": "Anonymous",
   "removeResidueMembers": "Clicking ok will also remove those members as they left the group.",
@@ -428,8 +431,30 @@
   "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
   "deviceOnly": "Device Only",
   "entireAccount": "Entire Account",
+  "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
+  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
+  "iAmSure": "I am sure",
   "recoveryPhraseSecureTitle": "You're almost finished!",
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
-  "notificationSubtitle": "Notifications - $setting$"
+  "notificationSubtitle": "Notifications - $setting$",
+  "deletionTypeTitle": "Deletion Type",
+  "deleteJustForMe": "Delete just for me",
+  "messageDeletedPlaceholder": "This message has been deleted",
+  "messageDeleted": "Message deleted",
+  "surveyTitle": "Take our Session Survey",
+  "goToOurSurvey": "Go to our survey",
+  "incomingCall": "Incoming call",
+  "accept": "Accept",
+  "decline": "Decline",
+  "endCall": "End call",
+  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
+  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
+  "unableToCall": "cancel your ongoing call first",
+  "unableToCallTitle": "Cannot start new call",
+  "callMissed": "Missed call from $name$",
+  "callMissedTitle": "Call missed",
+  "startVideoCall": "Start Video Call",
+  "noCameraFound": "No camera found",
+  "noAudioInputFound": "No audio input found"
 }
