--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -125,13 +125,16 @@
   "moreInformation": "更多信息",
   "resend": "重发",
   "deleteMessage": "删除消息",
+  "deleteMessageQuestion": "Delete message?",
+  "deleteMessagesQuestion": "Delete messages?",
   "deleteMessages": "删除消息",
   "deleteMessageForEveryone": "对所有人删除消息",
+  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
   "deleteMessagesForEveryone": "对所有人删除消息",
   "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "永久删除此会话？",
   "clearAllData": "清除所有数据",
-  "deleteAccountWarning": "这将永久删除您的消息、会话和联系人。",
+  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
   "deleteContactConfirmation": "您确定要删除此对话吗？",
   "quoteThumbnailAlt": "引用消息图片的缩略图",
   "imageAttachmentAlt": "消息图片",
@@ -150,7 +153,7 @@
   "savedTheFile": "$name$ 保存了媒体内容。",
   "linkPreviewsTitle": "发送链接预览",
   "linkPreviewDescription": "多数链接都支持预览",
-  "linkPreviewsConfirmMessage": "在发送或接收链接预览时，您将不会有完整的元数据保护。",
+  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
   "mediaPermissionsTitle": "麦克风和摄像头",
   "mediaPermissionsDescription": "允许访问摄像头和麦克风",
   "spellCheckTitle": "拼写检查",
@@ -426,10 +429,32 @@
   "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
   "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
   "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
-  "deviceOnly": "Device Only",
+  "deviceOnly": "仅设备",
   "entireAccount": "Entire Account",
+  "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
+  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
+  "iAmSure": "I am sure",
   "recoveryPhraseSecureTitle": "You're almost finished!",
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
-  "notificationSubtitle": "Notifications - $setting$"
+  "notificationSubtitle": "Notifications - $setting$",
+  "deletionTypeTitle": "Deletion Type",
+  "deleteJustForMe": "Delete just for me",
+  "messageDeletedPlaceholder": "This message has been deleted",
+  "messageDeleted": "Message deleted",
+  "surveyTitle": "Take our Session Survey",
+  "goToOurSurvey": "Go to our survey",
+  "incomingCall": "Incoming call",
+  "accept": "Accept",
+  "decline": "Decline",
+  "endCall": "End call",
+  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
+  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
+  "unableToCall": "cancel your ongoing call first",
+  "unableToCallTitle": "Cannot start new call",
+  "callMissed": "Missed call from $name$",
+  "callMissedTitle": "Call missed",
+  "startVideoCall": "Start Video Call",
+  "noCameraFound": "No camera found",
+  "noAudioInputFound": "No audio input found"
 }
