--- a/_locales/da/messages.json
+++ b/_locales/da/messages.json
@@ -1,7 +1,7 @@
 {
-  "privacyPolicy": "Terms & Privacy Policy",
+  "privacyPolicy": "Vilkår og privatlivspolitik",
   "copyErrorAndQuit": "Kopier fejl og afslut",
-  "unknown": "Unknown",
+  "unknown": "Ukendt",
   "databaseError": "Databasefejl",
   "mainMenuFile": "&Filer",
   "mainMenuEdit": "&Redigér",
@@ -29,26 +29,26 @@
   "viewMenuZoomOut": "Zoom ud",
   "viewMenuToggleFullScreen": "Vis fuldskærm",
   "viewMenuToggleDevTools": "Vis udviklerværktøjer",
-  "contextMenuNoSuggestions": "No Suggestions",
-  "openGroupInvitation": "Open group invitation",
-  "joinOpenGroupAfterInvitationConfirmationTitle": "Join $roomName$?",
-  "joinOpenGroupAfterInvitationConfirmationDesc": "Are you sure you want to join the $roomName$ open group?",
-  "enterSessionIDOrONSName": "Enter Session ID or ONS name",
+  "contextMenuNoSuggestions": "Ingen forslag",
+  "openGroupInvitation": "Åben gruppeinvitation",
+  "joinOpenGroupAfterInvitationConfirmationTitle": "Deltag i $roomName$?",
+  "joinOpenGroupAfterInvitationConfirmationDesc": "Er du sikker på, at du ønsker at deltage i den åbne gruppe, $roomName$?",
+  "enterSessionIDOrONSName": "Indtast Sessions-id eller ONS-navn",
   "loading": "Indlæser...",
   "optimizingApplication": "Optimerer programmet...",
-  "done": "Done",
+  "done": "Færdig",
   "me": "Mig",
   "view": "Vis",
   "youLeftTheGroup": "Du forlod gruppen",
-  "youGotKickedFromGroup": "You were removed from the group.",
-  "unreadMessage": "Unread Message",
-  "unreadMessages": "Unread Messages",
+  "youGotKickedFromGroup": "Du blev fjernet fra gruppen.",
+  "unreadMessage": "Ulæst besked",
+  "unreadMessages": "Ulæste beskeder",
   "debugLogExplanation": "Denne log vil blive lagt offentligt online for udvikleres brug. Du kan undersøge og redigere den før du sender.",
   "debugLogError": "Noget gik galt under upload! Venligst overvej manuelt at tilføje din log til den fejlrapport, du sender.",
   "reportIssue": "Rapporter en fejl",
   "gotIt": "Forstået",
   "submit": "Send",
-  "markAllAsRead": "Mark All as Read",
+  "markAllAsRead": "Marker alt som læst",
   "incomingError": "Fejl i forbindelse med indgående besked",
   "media": "Mediefiler",
   "mediaEmptyState": "Du har ingen mediefiler i denne samtale",
@@ -125,13 +125,16 @@
   "moreInformation": "More information",
   "resend": "Resend",
   "deleteMessage": "Slet besked",
+  "deleteMessageQuestion": "Delete message?",
+  "deleteMessagesQuestion": "Delete messages?",
   "deleteMessages": "Slet beskeder",
   "deleteMessageForEveryone": "Delete Message For Everyone",
+  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
   "deleteMessagesForEveryone": "Delete Messages For Everyone",
   "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "Slet samtale permanent?",
   "clearAllData": "Clear All Data",
-  "deleteAccountWarning": "This will permanently delete your messages and contacts.",
+  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
   "deleteContactConfirmation": "Are you sure you want to delete this conversation?",
   "quoteThumbnailAlt": "Miniatur af billede fra citeret besked",
   "imageAttachmentAlt": "Billede vedhæftet til beskeden",
@@ -150,7 +153,7 @@
   "savedTheFile": "Media saved by $name$",
   "linkPreviewsTitle": "Send Link Previews",
   "linkPreviewDescription": "Previews are supported for most urls",
-  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending or receiving link previews.",
+  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
   "mediaPermissionsTitle": "Microphone and Camera",
   "mediaPermissionsDescription": "Tillad adgang til kamera og mikrofon",
   "spellCheckTitle": "Spell Check",
@@ -428,8 +431,30 @@
   "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
   "deviceOnly": "Device Only",
   "entireAccount": "Entire Account",
+  "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
+  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
+  "iAmSure": "I am sure",
   "recoveryPhraseSecureTitle": "You're almost finished!",
   "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
   "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
-  "notificationSubtitle": "Notifications - $setting$"
+  "notificationSubtitle": "Notifications - $setting$",
+  "deletionTypeTitle": "Deletion Type",
+  "deleteJustForMe": "Delete just for me",
+  "messageDeletedPlaceholder": "This message has been deleted",
+  "messageDeleted": "Message deleted",
+  "surveyTitle": "Take our Session Survey",
+  "goToOurSurvey": "Go to our survey",
+  "incomingCall": "Incoming call",
+  "accept": "Accept",
+  "decline": "Decline",
+  "endCall": "End call",
+  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
+  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
+  "unableToCall": "cancel your ongoing call first",
+  "unableToCallTitle": "Cannot start new call",
+  "callMissed": "Missed call from $name$",
+  "callMissedTitle": "Call missed",
+  "startVideoCall": "Start Video Call",
+  "noCameraFound": "No camera found",
+  "noAudioInputFound": "No audio input found"
 }
