--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -125,13 +125,16 @@
   "moreInformation": "Más detalles",
   "resend": "Reenviar",
   "deleteMessage": "Eliminar Mensaje",
+  "deleteMessageQuestion": "Delete message?",
+  "deleteMessagesQuestion": "Delete messages?",
   "deleteMessages": "Eliminar mensajes",
   "deleteMessageForEveryone": "Borrar mensaje para todos",
+  "deleteMessageForEveryoneLowercase": "Delete Message For Everyone",
   "deleteMessagesForEveryone": "Borrar mensajes para todos",
   "deleteForEveryone": "Delete For Everyone",
   "deleteConversationConfirmation": "¿Eliminar este chat permanentemente?",
   "clearAllData": "Borrar todos los datos",
-  "deleteAccountWarning": "Esto eliminará permanentemente tu ID de Session, incluyendo todos los mensajes, sesiones y contactos.",
+  "deleteAccountWarning": "This will permanently delete your messages, and contacts.",
   "deleteContactConfirmation": "¿Seguro que quieres eliminar esta conversación?",
   "quoteThumbnailAlt": "Miniatura de una foto como cita de un mensaje",
   "imageAttachmentAlt": "Imagen adjunta al mensaje",
@@ -150,7 +153,7 @@
   "savedTheFile": "$name$ guardó el archivo",
   "linkPreviewsTitle": "Enviar Previsualizaciones",
   "linkPreviewDescription": "Previews are supported for most urls.",
-  "linkPreviewsConfirmMessage": "No tendrás una privacidad completa de metadatos al enviar o recibir previsualizaciones de links.",
+  "linkPreviewsConfirmMessage": "You will not have full metadata protection when sending link previews.",
   "mediaPermissionsTitle": "Micrófono y Cámara",
   "mediaPermissionsDescription": "Permitir acesso a cámara y micrófono",
   "spellCheckTitle": "Revisión ortográfica",
@@ -280,42 +283,42 @@
   "changeAccountPasswordTitle": "Cambiar la Contraseña de la Cuenta",
   "changeAccountPasswordDescription": "Change your password",
   "removeAccountPasswordTitle": "Remove Account Password",
-  "removeAccountPasswordDescription": "Remove the password associated with your account",
+  "removeAccountPasswordDescription": "Eliminar la contraseña asociada a tu cuenta",
   "enterPassword": "Por favor, introduce tu contraseña",
   "confirmPassword": "Confirmar contraseña",
   "pasteLongPasswordToastTitle": "El contenido del portapapeles excede la longitud máxima de la contraseña de $max_pwd_len$ caracteres.",
-  "showRecoveryPhrasePasswordRequest": "Please enter your password",
+  "showRecoveryPhrasePasswordRequest": "Introduce tu contraseña",
   "recoveryPhraseSavePromptMain": "Tu frase de recuperación es la llave maestra de tu ID de Session, puedes usarla para recuperar tu ID de Session en caso de pérdida de acceso a tu dispositivo. Guarda tu frase de recuperación en un lugar seguro y no se la digas a nadie.",
   "invalidOpenGroupUrl": "URL no válida",
   "copiedToClipboard": "Copiado en el portapapeles",
   "passwordViewTitle": "Escribe Tu Contraseña",
   "unlock": "Desbloquear",
   "password": "Contraseña",
-  "setPassword": "Set Password",
+  "setPassword": "Establecer Contraseña",
   "changePassword": "Cambiar Contraseña",
   "removePassword": "Eliminar Contraseña",
   "maxPasswordAttempts": "Invalid Password. Would you like to reset the database?",
-  "typeInOldPassword": "Please type in your old password",
-  "invalidOldPassword": "Old password is invalid",
+  "typeInOldPassword": "Por favor, escribe tu contraseña antigua",
+  "invalidOldPassword": "La contraseña antigua es inválida",
   "invalidPassword": "Contraseña inválida",
   "noGivenPassword": "Por favor, introduce tu contraseña",
-  "passwordsDoNotMatch": "Passwords do not match",
-  "setPasswordInvalid": "Passwords do not match",
-  "changePasswordInvalid": "The old password you entered is incorrect",
+  "passwordsDoNotMatch": "Las contraseñas no coinciden",
+  "setPasswordInvalid": "Las contraseñas no coinciden",
+  "changePasswordInvalid": "La contraseña antigua que ingresaste es incorrecta",
   "removePasswordInvalid": "Contraseña incorrecta",
   "setPasswordTitle": "Set Password",
   "changePasswordTitle": "Contraseña Cambiada",
   "removePasswordTitle": "Contraseña Eliminada",
-  "setPasswordToastDescription": "Your password has been set. Please keep it safe.",
-  "changePasswordToastDescription": "Your password has been changed. Please keep it safe.",
-  "removePasswordToastDescription": "You have removed your password.",
-  "publicChatExists": "You are already connected to this open group",
+  "setPasswordToastDescription": "Tu contraseña ha sido establecida. Por favor, manténgala segura.",
+  "changePasswordToastDescription": "Tu contraseña ha sido cambiada. Por favor, manténla segura.",
+  "removePasswordToastDescription": "Has eliminado tu contraseña.",
+  "publicChatExists": "Ya estás conectado a este grupo abierto",
   "connectToServerFail": "No te pudiste unir al grupo",
   "connectingToServer": "Conectando ...",
   "connectToServerSuccess": "Conectado con exito al grupo abierto",
-  "setPasswordFail": "Failed to set password",
+  "setPasswordFail": "Error al establecer la contraseña",
   "passwordLengthError": "Password must be between 6 and 64 characters long",
-  "passwordTypeError": "Password must be a string",
+  "passwordTypeError": "La contraseña debe ser una cadena de texto",
   "passwordCharacterError": "Password must only contain letters, numbers and symbols",
   "remove": "Eliminar",
   "invalidSessionId": "ID de Session no válida",
@@ -421,15 +424,37 @@
   "latestUnreadIsAbove": "El primer mensaje no leído está arriba",
   "sendRecoveryPhraseTitle": "Enviando Frase de Recuperación",
   "sendRecoveryPhraseMessage": "Estás intentando enviar tu frase de recuperación, que puede utilizarse para acceder a tu cuenta. ¿Estás seguro de que deseas enviar este mensaje?",
-  "dialogClearAllDataDeletionFailedTitle": "Data not deleted",
+  "dialogClearAllDataDeletionFailedTitle": "Datos no eliminados",
   "dialogClearAllDataDeletionFailedDesc": "Data not deleted with an unknown error. Do you want to delete data from just this device?",
   "dialogClearAllDataDeletionFailedTitleQuestion": "Do you want to delete data from just this device?",
   "dialogClearAllDataDeletionFailedMultiple": "Data not deleted by those Service Nodes: $snodes$",
-  "dialogClearAllDataDeletionQuestion": "Would you like to clear only this device, or delete your entire account?",
-  "deviceOnly": "Device Only",
+  "dialogClearAllDataDeletionQuestion": "¿Quieres borrar sólo este dispositivo o eliminar toda tu cuenta?",
+  "deviceOnly": "Solamente en el dispositivo",
   "entireAccount": "Entire Account",
-  "recoveryPhraseSecureTitle": "You're almost finished!",
-  "recoveryPhraseRevealMessage": "Secure your account by saving your recovery phrase. Reveal your recovery phrase then store it safely to secure it.",
-  "recoveryPhraseRevealButtonText": "Reveal Recovery Phrase",
-  "notificationSubtitle": "Notificaciones - $setting$"
+  "areYouSureDeleteDeviceOnly": "Are you sure you want to delete your device data only?",
+  "areYouSureDeleteEntireAccount": "Are you sure you want to delete your entire account, including the network data?",
+  "iAmSure": "I am sure",
+  "recoveryPhraseSecureTitle": "¡Ya casi has terminado!",
+  "recoveryPhraseRevealMessage": "Protege tu cuenta al guardar la frase de recuperación. Revela tu frase de recuperación y guárdala de forma segura para protegerla.",
+  "recoveryPhraseRevealButtonText": "Mostrar frase de recuperación",
+  "notificationSubtitle": "Notificaciones - $setting$",
+  "deletionTypeTitle": "Deletion Type",
+  "deleteJustForMe": "Delete just for me",
+  "messageDeletedPlaceholder": "This message has been deleted",
+  "messageDeleted": "Message deleted",
+  "surveyTitle": "Take our Session Survey",
+  "goToOurSurvey": "Go to our survey",
+  "incomingCall": "Incoming call",
+  "accept": "Accept",
+  "decline": "Decline",
+  "endCall": "End call",
+  "micAndCameraPermissionNeededTitle": "Camera and Microphone access required",
+  "micAndCameraPermissionNeeded": "You can enable microphone and camera access under: Settings (Gear icon) => Privacy",
+  "unableToCall": "cancel your ongoing call first",
+  "unableToCallTitle": "Cannot start new call",
+  "callMissed": "Missed call from $name$",
+  "callMissedTitle": "Call missed",
+  "startVideoCall": "Start Video Call",
+  "noCameraFound": "No camera found",
+  "noAudioInputFound": "No audio input found"
 }
